--- a/法律题-2.md
+++ b/法律题-2.md
@@ -286,83 +286,83 @@
     C:由证监会没收
     D:由李某和该公司共有
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 我国《个体工商户条例》2011年实施，下列有关个体工商户的表述错误的是（）
+    A:登记机关办理年度验照不得收取任何费用
+    B:个体工商户可以凭营业执照及税务登记证明在银行开户，申请贷款
+    C:予以注册登记的，登记机关应当自登记之日起7日内发给营业执照
+    D:县工商行政管理局可以委托其下属工商行政管理所办理个体工商户登记
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关基本医疗保险的表述，错误的是（）
+    A:低收入家庭60周岁以上的老年人所需个人缴纳部分，由政府补贴
+    B:个人跨统筹地区就业的，其基本医疗保险随本人转移，缴费年限累计计算
+    C:元雇工的个体工商户不能参加职工基本医疗保险
+    D:城镇居民基本医疗保险实行个人缴费和政府补贴相结合
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关基本养老保险的表述，错误的是（）
+    A:个人账户不得提前支取
+    B:参加基本养老的退休人员，若因病致残，可以领取病残津贴
+    C:国家根据职工平均工资增长，物价上涨的情况，适时提高养老保险待遇水平
+    D:新型农村社会养老保险实行个人缴费，集体补助，政府补贴相结合
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关工商保险的表述，错误的是（）
+    A:职工不缴纳工伤保险费
+    B:用人单位应支付职工治疗工伤期间的工资福利
+    C:职工因工作原因受到伤害，经鉴定丧失劳动能力的，享受工伤保险待遇
+    D:职工因醉酒导致本人在工作中受伤的，不认定为工伤
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关失业保险错误的是（）
+    A:失业保险由用人单位拟和职工共同缴纳
+    B:失业人员失业前，用人单位和本人已经缴纳失业保险费满一年的。可以领取失业保险金
+    C:失业人员失业前，用人单位和本人累计缴费满1年不足5年的，领取失业保险金期限最长为12个月
+    D:领取失业保险金的期限最长为36个月
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 根据《社会保险法》的规定，参加基本养老保险的个人，达到法定退休年龄时，累计缴费满（）年的，按月领取基本养老保险
+    A:5
+    B:10
+    C:15
+    D:20
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 失业保险的标准，由省自治区，直辖市人民政府确定，不得低于（）
+    A:本地最低工资
+    B:本地最低工资的70%
+    C:本地社会平均工资的50%
+    D:城市居民最低生活保障标准
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 甲和乙因宅基地发生争执，互扭中，甲把乙打成轻伤，甲要求乙承担刑事责任，并赔偿经济损失，于是向法院（）
+    A:自诉
+    B:上诉
+    C:申诉
+    D:起诉
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 有关刑事诉讼的说法，错误的是（）
+    A:自诉案件中的被告人有罪的举证责任由自诉人承担
+    B:行政机关在查办案件过程中手机的电子数据在刑事诉讼中不能作为证据使用
+    C:公安机关在向有关单位和个人手机，调取证据时，对涉及国家秘密，商业秘密，个人隐私的证据，应当保密
+    D:证人证言必须在法庭上应该公诉人，被害人，被告人，辩护双方质证并且查实以后，才能作为定案的根据
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 以下途径收集的证据不应予以排除的是（）
+    A:刑诉逼供收集的
+    B:暴力方法收集的
+    C:收集物证不符合法定程序又不能补正的
+    D:行政机关在行政执法中收集的证据材料
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 基层人民法院管辖的案件，不适用简易程序审判的是（）
+    A:被告人承认自己所犯罪行，对指控的犯罪事实没有异议的
+    B:被告人对适用简易程序没有异议的
+    C:案件事实清楚，证据充分的
+    D:被告人是盲，聋，哑
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 适用简易程序审理的案件，对可能判处有期徒刑超过3年的，人民法院最迟应在受理后（）内审结。
+    A:20
+    B:一个月
+    C:一个半月
+    D:三个月
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 在刑事诉讼过程中，第二审人民法院受理上诉案件，一般在（）内审结
+    A:一个月
+    B:二个月
+    C:三个月
+    D:六个月
          
 ##### 
     A:
