'人力局法律单选完成'

--- a/法律题-2.md
+++ b/法律题-2.md
@@ -364,71 +364,71 @@
     C:三个月
     D:六个月
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 有关未成年人刑事诉讼的说法，以下有误的是（）
+    A:对范围的未成年人实行教育，感化，挽救的方针
+    B:审判的时候被告人不满18周岁的案件，不公开审理
+    C:审判的时候被告人不满18周岁，被判处5年以下有期徒刑的，应当对相关犯罪记录予以封存
+    D:讯问女性未成年人犯罪嫌疑人，应当有女工作人员在场
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 村民胡某经常聚众赌博，被乡派出所处200元的罚款，胡某对派出所的行为不服，下列说法不正确的是（）
+    A:胡某应当首先申请行政复议，既可以向乡政府申请，也可以向县公安局申请
+    B:先向县公安局申请申请行政复议，对复议不服，在提请诉讼
+    C:先向市公安局申请申请行政复议，对复议不服，在提请诉讼
+    D:可以直接向人民法院起诉
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 行政诉讼中，举证责任主要是由（）一方承担责任，又被称为“举证倒置”
+    A:原告
+    B:公诉方
+    C:自诉案件原告
+    D:被诉的行政主体
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 关于行政诉讼方位和行政复议范围关系的表述，正确的是（）
+    A:能提起复议的具体行政行为，也一定能提起行政诉讼
+    B:能提起行政诉讼的具体行政行为，也一定能提起复议
+    C:有些案件只能提起行政诉讼，有些案件只能提起行政复议
+    D:两者范围相同
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 行政诉讼中，人民法院审理行政案件，可以参照（）
+    A:法律
+    B:行政法规
+    C:规章
+    D:地方性法规
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 我国民事诉讼规定，当事人不服地方人民法院第一审裁定的上诉期限是（）天
+    A:20
+    B:15
+    C:10
+    D:5
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关民事诉讼，错误的是（）
+    A:少数民族公民有用本民族，语言和文字民事诉讼的权利
+    B:当事人有权在法律规定的范围内处分自己诉讼权利
+    C:人民法院审理民事案件，应当根据自愿原则进行调解
+    D:当事人对人民调解委员会，调解达成的协议应当履行
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 有关民事诉讼证据的表述，错误的是（）
+    A:对于书证，只提交书证复制品就可以了
+    B:当事人对自己提出的主张有责任提供证据
+    C:证据必须查证属实才能作为认定事实的根据
+    D:凡是知道案件情况的单位和个人，都有义务出庭作证
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关民事诉讼法中调解的表述，错误的是（）
+    A:调解协议的内容不得违反法律规定
+    B:人民法院可以邀请有关单位和个人协助调解
+    C:调解书经双方当事人签收后，即具有法律效力
+    D:调解维持收养关系的案件达成协议的，人民法院应当制作调解书
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关民事诉讼中审判组织的表示，错误的是（）
+    A:合议庭的人数必须为单数
+    B:人民法院审理第二审民事案件，由审判员组成合议庭
+    C:陪审员在执行陪审职务时，与审判员有同等的权利义务
+    D:发回重审的案件，原审判人民法院应当按照第二审程序组成合议庭
          
-##### 
-    A:
-    B:
-    C:
-    D:
+##### 下列有关我国民事诉讼法规定的审理期限，错误的是（）
+    A:适用普通程序审理的案件，应当在立案之日起6个月内审结
+    B:适用普通程序审理的案件，有特殊情况需要延长的，经本院院长批准，可以延长6个月
+    C:适用简易程序审理的案件，应当在立案之日起3个月内审结
+    D:适用简易程序审理的案件，经本院院长批准，可以适当延长
          
 ##### 
     A:
