--- a/2-2宪法-第二节 我国的国体、政体和结构形式.md
+++ b/2-2宪法-第二节 我国的国体、政体和结构形式.md
@@ -1,14 +1,29 @@
 # 第二节 我国的国体、政体和结构形式
 # 一、我国的国体和政体
     所谓国体，是指国家的根本性质，即国家的阶级性质和阶级内容。国体体现着国家的阶级本质和内涵。
+    
     所谓政体，是指国家政权的组织形式和管理形式，即统治阶级采取何种方式组织自己的政权机关，实现自己的统治。
 
     国体决定政体，但政体有相对的独立性，同样的国体可以有不同的政体形式。
+    
     我国的国体是工人阶级领导的以工农联盟为基础的人民民主专政的社会主义国家，
+    
     我国的政体是以【民主集中制为组织原则和活动原则的】人民代表大会``制度``。
 
     民主集中制在中国的具体表现是中共决策，政协参议，人大立法，政府执行。
     这一制度被西方学者约翰·奈斯比特在《大趋势》中称为具有中国特色的“纵向民主”。
+    
+##### 我国社会主义法律制度首先是哪个阶级意志的体现？( A )
+    A．工人阶级
+    B．农民阶级
+    C．拥护国家统一的爱国者
+    D．拥护社会主义的爱国者
+    E. 中国产党
+    F. 农民
+    G. 全体中国人民
+    我国是工人阶级领导的以工农联盟为基础的人民民主专政的社会主义国家    
+    首先是：工人阶级意志的体现
+    其次是：工人阶级领导下，全体人民共同意志的体现        
 
 ### 二、国家结构形式
 ###（一）国家结构形式的含义
@@ -23,22 +38,25 @@
 
 ###（二）国家结构形式的类型
     一般而言，当今世界主要有两种国家结构形式，即单一制和联邦制。
+    
 ### 1.单一制
     单一制，它是指国家由若干普通行政单位或自治单位、特别行政区等组成，而各组成单
-    位都是一国不可分割部分的国家结构形式，其特点是：（1）全国只有一部宪法，只有一个
-    中央国家机关体系；（2）每个公民只有一个国籍；（3）各组成单位均受中央政府的统一领
-    导，而不能脱离中央独立；（4）【各组成单位的权力源于中央以法律形式的授予】；（5）中央
-    政府是唯一能代表国家进行国际交往的主体。
+    位都是一国不可分割部分的国家结构形式，其特点是：
+    （1）全国只有一部宪法，只有一个中央国家机关体系；
+    （2）每个公民只有一个国籍；
+    （3）各组成单位均受中央政府的统一领导，而不能脱离中央独立；
+    （4）【各组成单位的权力源于中央以法律形式的授予】；
+    （5）中央政府是唯一能代表国家进行国际交往的主体。
     
 ### 2.联邦制
 
-    联邦制，它是指由两个或两个以上的联邦组成单位（如州、邦、共和国等）所结成的联
-    盟国家的国家结构形式，其特点是：（1）联邦和其组成单位各有自己的宪法和法律体系，
-    及各自相对独立的国家机关体系；（2）公民拥有双重国籍，既是组成单位的公民，又是联
-    邦的公民；（3）联邦最高立法机关通常采用两院制，其中一院由联邦组成单位选派代表组
-    成；（4）联邦与其组成单位的权限划分由联邦宪法规定，联邦的权力来自其组成单位的让
-    渡，凡未授予联邦的权力由其组成单位保留；（5）在国际交往中，联邦一般为唯一的国际
-    法主体，当然也有极少数联邦国家允许其组成单位与外国签定某些方面的条约。
+    联邦制，它是指由两个或两个以上的``联邦``组成单位（如州、邦、共和国等）所结成的联
+    盟国家的国家结构形式，其特点是：
+    （1）``联邦``和其组成单位``各有自己``的宪法和法律体系，及各自相对独立的国家机关体系；
+    （2）公民拥有双重国籍，既是组成单位的公民，又是联邦的公民；
+    （3）联邦最高立法机关通常采用两院制，其中``一院由联邦组成单位选派代表``组成；
+    （4）联邦与其组成单位的权限划分由联邦宪法规定，联邦的权力来自其组成单位的让渡，凡未授予联邦的权力由其组成单位保留；
+    （5）在国际交往中，联邦``一般为唯一``的国际法主体，当然也有极少数联邦国家允许其组成单位与外国签定某些方面的条约。
 
 
 ###（三）我国国家结构形式
@@ -56,6 +74,6 @@
     【地方在法律上不具有与中央平等的地位。】
     2.为处理多民族的关系，实行民族区域自治制度，赋予民族区域自治地方的自治机关以自治权。
     3.为了解决历史遗留问题，在香港、澳门实行“一国两制”，建立了特别行政区，允许特
-    别行政区保留原有的资本主义制度和生活方式，【并享有高度的自治权】。
+    别行政区保留原有的资本主义制度和生活方式，【并享有``高度的自治权``】。
 
 
