--- a/2-1法理学-六、法律解释.md
+++ b/2-1法理学-六、法律解释.md
@@ -26,8 +26,24 @@
 
     省、自治区、直辖市和其他有权制定地方性法规的地方人大常委会对其制定的``需要进一步明确界限``或``作补充规定的地方性法规``的解释。
     省、自治区、直辖市人民政府主管部门``对地方性法规``如何具体应用的问题所做的解释。
+    
+##### 行政机关对自己制定的法律所做的解释属于（B）
+    A:立法解释
+    B:行政解释
+    C:司法解释
+    D:使用解释
+
+    ### 2.行政解释    
 
 ### 3.司法解释
-    司法解释是指【国家最高司法机关】在适用法律、法规的过程中，对如何具体应用法律、法规的问题所做的解释。它包括：（1）审判解释；（2）检察解释；（3）审判、检察联合解释。
+    司法解释是指【国家最高司法机关】在适用法律、法规的过程中，对如何具体应用法律、法规的问题所做的解释。
+    它包括：（1）审判解释；（2）检察解释；（3）审判、检察联合解释。
 
     注意：我国【法定的法律解释体制】从总体上看是以【全国人大常委会为主体】的分工配合体制。
+
+
+##### 区别正式解释和非正式解释的区别是（C）
+    A:解释的主体
+    B:解释的方法
+    C:是否具有法律上的约束力
+    D:解释的对象
