--- a/2-2宪法-第二节 我国的国体、政体和结构形式.md
+++ b/2-2宪法-第二节 我国的国体、政体和结构形式.md
@@ -12,6 +12,15 @@
 
     民主集中制在中国的具体表现是中共决策，政协参议，人大立法，政府执行。
     这一制度被西方学者约翰·奈斯比特在《大趋势》中称为具有中国特色的“纵向民主”。
+
+##### 我国的政权组织形式（B）
+    A:人民代表大会
+    B:人民代表大会制
+    C:民主集中制
+    D:全国人大和地方人大
+    注：我国的政体是以【民主集中制为组织原则和活动原则的】人民代表大会``制度``
+
+    # 一、我国的国体和政体    
     
 ##### 我国社会主义法律制度首先是哪个阶级意志的体现？( A )
     A．工人阶级
