--- a/2-2宪法-第四节 我国的国家机构.md
+++ b/2-2宪法-第四节 我国的国家机构.md
@@ -15,6 +15,18 @@
     组织其他中央国家机关，
     决定国家重大事项，
     选举和罢免中央国家机关组成人员等职权。
+
+
+##### 全国和地方各级人民代表大会的代表应当具有广泛性，应该有适当数量的基层代表，其中基层代表不包括（D）
+    A:工人
+    B:农民
+    C:知识分子
+    D:军人
+
+    （1）全国人民代表大会的代表，由省、自治区、直辖市的人民代表大会和人民解放军（军队，军人）选举产生
+    （2）全国人民代表大会和地方各级人民代表大会的代表应当具有广泛的代表性，
+        应当有适当数量的基层代表，特别是工人、农民和知识分子代表；
+    （3）应当有适当数量的妇女代表，并逐步提高妇女代表的比例。    
     
 ### （二）全国人民代表大会常务委员会
 ### 1.全国人民代表大会常务委员会的性质、组成
@@ -101,10 +113,19 @@
     我国设立最高人民法院、地方各级人民法院和军事法院等专门人民法院。
     地方各级人民法院包括【基层人民法院、中级人民法院、高级人民法院】。
     专门人民法院``主要``是指军事法院。
+    
     最高人民法院是最高的国家审判机关，监督地方各级人民法院和军事法院等专门人民法院的审判工作，
     上级人民法院监督下级人民法院的工作。
+    
     【最高人民法院对全国人民代表大会及其常务委员会负责，】
     【地方各级人民法院对产生它的国家权力机关负责并报告工作。】
+
+##### 最高人民法院是国家的（A）
+    A:最高审判机关
+    B:专门审判机关
+    C:最高司法机关
+    D:特别审判机关
+
     
 ###（二）人民检察院
 ### 1.人民检察院的性质、地位
