--- a/法律题.md
+++ b/法律题.md
@@ -201,53 +201,22 @@
 
     ### 1.国家监督的概念和特点、
 
-##### 区别正式解释和非正式解释的区别是（C）
-    A:解释的主体
-    B:解释的方法
-    C:是否具有法律上的约束力
-    D:解释的对象
 
-##### 法律责任的免除（C）
-    A:无责任
-    B:不负责任
-    C:有责任，但是出现法定条件，被部分或者全部免除
-    D:有责任，但是不受法律制裁
 
-    注：既然是免除，说明原来是有责任的，但是法律规定可以免除，部分免除的话，说明还是要受到法律的制裁！
 
 ##### 民事责任的特征说法正确的是（C）
-    A:民事责任具有国家强制性 ``没有强制性没人会赔偿给你！``
+    A:民事责任具有国家强制性 ``没有强制性，没人会赔偿给你！``
     B:民事责任以财产性责任为主
     C:民事责任是一种惩罚性责任 ``补偿性责任``
     D:承担民事责任的前提是违反了民事义务
 
     ### 民事责任的特征主要包括：
 
-##### 我国的政权组织形式（B）
-    A:人民代表大会
-    B:人民代表大会制
-    C:民主集中制
-    D:全国人大和地方人大
 
-    # 一、我国的国体和政体
 
-##### 我国公民的基本义务（A）
-    A:见义勇为
-    B:尊重社会公德
-    C:遵守宪法和法律
-    D:维护国家统一和全国各民族的团结
 
-    ### 三、公民的基本义务
 
-##### 全国和地方各级人民代表大会的代表应当具有广泛性，应该有适当数量的基层代表，其中基层代表不包括（D）
-    A:工人
-    B:农民
-    C:知识分子
-    D:军人
 
-    （1）全国人民代表大会的代表，由省、自治区、直辖市的人民代表大会和人民解放军（军队，军人）选举产生
-    （2）全国人民代表大会和地方各级人民代表大会的代表应当具有广泛的代表性，应当有适当数量的基层代表，特别是工人、农民和知识分子代表；
-    （3）应当有适当数量的妇女代表，并逐步提高妇女代表的比例。
 
 ##### （C）国实行刚性宪法
     A:新西兰
@@ -267,17 +236,11 @@
     B:《钦定宪法大纲》      第一部宪法性文件
     C:《中华民国临时约法》  唯一一部资产阶级性质的宪法
     D:《中华苏维埃宪法大纲》
+    
+    
 
 
-##### 对服兵役的限制性规定错误的是（C）
-    A:依法被剥夺政治权利的人不得服兵役
-    B:对被羁押的人不征集服兵役
-    C:因身体条件不适合的实行缓征；
-    D:对全日制学生和是家庭唯一劳动力的人实行缓征。
 
-    注：身体不适合怎么打仗，不需要你服兵役
-
-    ###（1）对服兵役的限制性规定
 
 ##### 国务院《全面推进依法行政实施纲要》，下列不属于深化行政体制改革方面的内容的是(CE)
     A、推进综合执法试点
@@ -305,13 +268,7 @@
     
     ### 第七条
 
-##### 最高人民法院是国家的（A）
-    A:最高审判机关
-    B:专门审判机关
-    C:最高司法机关
-    D:特别审判机关
 
-    ## （一）司法的概念和特征
 
 ##### 享有国家政权，能以自己的名义行驶政权，并能独立承担由此而产生的法律责任的组织为（A）
     A:行政主体
@@ -321,13 +278,7 @@
 
     ### （二）行政主体
 
-##### 行政机关对自己制定的法律所做的解释属于（B）
-    A:立法解释
-    B:行政解释
-    C:司法解释
-    D:使用解释
 
-    ### 2.行政解释
 
 ##### 行政机关在行驶职权时，应当平等的适用法律规范，不得因人因时因地而异，对相同的事实应该相同对待（B）
     A:行政合法性原则
