--- a/政治权利.md
+++ b/政治权利.md
@@ -37,4 +37,11 @@
      是依照法律被剥夺政治权利的人除外。
      （2）言论、出版、集会、结社、游行、示威的自由。
      （3）对国家机关和国家工作人员，有批评、建议的权利，申诉、控告或者检举的权利，
-     （4）依法取得赔偿的权利。   
+     （4）依法取得赔偿的权利。
+     
+##### 吴某因诈骗被判有期徒刑10年，附加剥夺政治权利3年，则实际上被剥夺的政治权利应为（C）
+    A:3年
+    B:10年
+    C:13年
+    D:7年
+    被剥夺的政治权利:始于刑罚开始        
