--- a/2-2宪法-公民的基本权利和义务.md
+++ b/2-2宪法-公民的基本权利和义务.md
@@ -98,9 +98,11 @@
 
     注：身体不适合怎么打仗，不需要你服兵役
         被剥夺政治权利的人，可能会危害国家的安全，也不要你
-        
 
-    ###（1）对服兵役的限制性规定    
+##### 对依法剥夺政治权利的人实行缓征兵役（×）
+
+
+
 
 ###（2）我国公民服兵役义务的形式
 
