--- a/行政强制措施和行政强制执行.md
+++ b/行政强制措施和行政强制执行.md
@@ -10,3 +10,26 @@
 
 
 ### 行政强制措施    
+    (限封冻扣)
+    （一）限制公民人身自由；
+    （二）查封场所、设施或者财物；
+    （三）扣押财物；
+    （四）冻结存款、汇款；
+    （五）其他行政强制措施。
+
+### 行政强制执行  
+    1．代执行。
+    2．执行罚。
+    3．直接执行
+
+    （一）对财产的行政强制执行方式
+        1．强制划拨；
+        2．强制扣缴；
+        3．强行退还；
+        4．强行拆除。
+
+    （二）对人身的行政强制执行方式
+        1．强制拘留；
+        2．强制传唤；
+        3．强制履行；
+        4．遣送出境。    
