--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -1,4 +1,4 @@
-##### 对依法剥夺政治权利的人实行缓征兵役（）
+
 
 ##### 甲到购物中心购物，和购物中心发生了纠纷，经工商部门调解后，甲对调解不服，可以提起行政诉讼（）
 
@@ -20,13 +20,51 @@
 
 ##### 任何公民，非经人民检察院批准或者决定，或者人民法院决定，并由公安机关执行，不受逮捕
 
-##### 
+##### 13 全国人大的组成人员不得担任党的机关，国家行政机关，审判机关，国家行政机关的职务（）
 
-##### 
+##### 14 刑事制裁和民事制裁的目的相同，都是为了预防犯罪不就被害人的损失（） 
 
-##### 
+##### 15 全国人大常委会 ，国务院均实行首长负责制（）
 
-##### 
+##### 16 贪污贿赂（hui lu）罪包含，挪用公款罪，介绍贿赂罪，巨额财产来源不明罪隐瞒境外存款罪，私分国有财产罪和私分罚没财务罪（）
 
-##### 
+##### 17 已满16周岁的人犯罪应负刑事责任，已满14周岁不满16周岁的人犯故意杀人罪，爆炸，投毒以及危害国家安全组等应付刑事责任，不满14周岁，不负刑事责任（）
+
+##### 18 行政诉讼过程中，被告不得自行向原告，第三人和证人收集证据（）
+
+##### 19 国家权利运行的唯一目的是保障公民权利的实现（）
+
+##### 20 成文宪法的缺点是适应差，不容易顺应复杂多变的政治环境和社会发展（）
+
+##### 21 具体行政行为的形式多种多样，包括行政许可，行政奖励，行政立法（）
+
+##### 22 普通累犯是指被判处有期徒刑以上刑罚的犯罪分子，刑罚执行完毕后或者赦免以后，五年内再犯应当判处有期徒刑以上刑罚之罪犯罪人。
+
+##### 23 两人以上的共同过失犯罪，也会构成共同犯罪
+
+##### 24 诉讼代理人在同一个案件中只能代理一方当事人进行诉讼，不能同时代表双方进行诉讼
+
+##### 25 上级人民法院监督下级人民法院的工作 
+
+##### 26 法律面前人人平等，指的是法律适用平等
+
+##### 27 中央人民政府是我国对外交往的唯一国际法主体
+
+##### 28 法人的民事权利能力和公民的民事权利不同，而且不同的法人其民事权利能力也不同
+
+##### 29 民定宪法是成文宪法的最早形式
+
+##### 30 一物之上只能存在一个所有权，不得有两个互不相容两个以上的物权同时存在在一个物体上
+
+##### 31 一物一权是指一物之上只能有一个所有权
+
+##### 32 有民事行为能力的人，一定有民事权利能力
+
+##### 33 甲和乙是好友，在一次逛商场是，甲看上了一把仿真枪，于是乙就买来送给甲，但是甲拿这把枪来抢劫，甲和乙构成共同犯罪
+
+##### 34 同样的国体可以有不同的政体形式
+
+##### 35 外国人，无国籍人，和外国人在我国的企业也可以成为我国的行政法律关系主体
+
+
 
