法律真题判断

--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -1,11 +1,3 @@
-
-
-##### 甲到购物中心购物，和购物中心发生了纠纷，经工商部门调解后，甲对调解不服，可以提起行政诉讼（）
-
-##### 权力制约原则体现在两个方面：1.公民权利对国家权利的制约，2.国家权力对公民权利的制约（）
-
-##### 违宪责任是所有法律责任中最严厉的一种（）
-
 ##### 当事人向人民法院请求保护民事权利的诉讼时效期限为1年（）
 
 ##### 物权优先，原则是指物权在任何时候都优于债权（）
@@ -66,5 +58,306 @@
 
 ##### 35 外国人，无国籍人，和外国人在我国的企业也可以成为我国的行政法律关系主体
 
+##### 36 在中华人民共和国境内的企业，个体经济组织和已知形成的劳动关系的劳动者适用《劳动法》
+
+##### 37 法以权利和义务为主要内容并具有普遍的约束力。
+
+##### 38 行政诉讼中一律不适用调解
+
+##### 39 刑罚中，附加刑只能附加使用，不能单独适用
+
+##### 40 许多国家制定和修改宪法时，都要成立专门的制宪和修宪的机构
+
+##### 41 法律所说的人是：自然人，本国公民，外国人，无国籍人，不包括法人。
+
+##### 42 我国宪法从结构上看包括序言，正文四章和附则
+
+##### 43 仲裁机构隶属于行政机关，不附属于法院
+
+##### 44 只有国家机关和国家机关工作人员，违法行驶职权，对公民的和其他组织造成损害的，受害人才有依法取得国家赔偿的权利
+
+##### 45 成文宪法都属于刚性宪法
+
+##### 46 受教育和劳动及时公民的权利又是公民的义务
+
+##### 47 我国法律一律不具有溯及力
+
+##### 48 民事诉讼一审程序一律应当在立案之日起6个月内审结
+
+##### 49 刑事自诉案件是被害人及法定代表人或者近亲属为追究被告人的刑事责任，自行向人民法院起诉的案件，人民法院应当受理
+
+##### 50 紧急避险行为不负任何责任
+
+##### 51 仲裁裁决书与人民法院生效的判决书具有同等效力
+
+##### 52 某公司因工作需要，购买了一辆小轿车，其权益受《消费者权益保护法保护》
+
+##### 53 我国公民的权利和义务具有一致性
+
+##### 54 不正当竞争行为侵害的是消费者的合法权益
+
+##### 55 在民事诉讼中，人民法院对起诉进行审理后，对应当提前行政诉讼的案件，应当告知原告提起行政诉讼
+
+##### 56 农村劳动者，现役军人，家庭保姆不适用劳动法。
+
+##### 57 我国刑法制订了，5种主刑 4种附加刑
+
+##### 58 如果合同约定不明确，则债务人可以随时向债权人履行义务，债权人也可随时要求债务人履行义务，但应当给对方足够的准备时间。
+
+##### 59 行政诉讼既要审查被诉行政行为的合法性，也要审查合理性
+
+##### 60 我国公民有言论、出版、集会、结社、游行、示威和罢工的自由。
+
+##### 61 精神抚慰金不属于国家赔偿的规定赔偿范围
+
+##### 62 地方各级人民政府对本级人大及其常委会负责并报告工作，同时还要想上一级行政机关负责并报告工作
+
+##### 63 对教育部的具体行政行为不服的，可以向国务院申请裁决，也可以向人民法院提起诉讼
+
+##### 64 守法主体不仅包括国家机关，也包括所有的法人和自然人
+
+##### 65 犯罪方面的故意，不是任何犯罪所必备的犯罪构成的主观要件
+
+##### 66 行政行为一经作出，非经法定程序，不得随意变更和撤销
+
+##### 67 《中华人民政治协商会议共同纲领》不是我国宪法的渊源形式
+
+##### 68 狭义的宪法监督是指所有的国家机关和执政党对立法活动和行政活动所实施的监督
+
+##### 69 宪法的实施是全国人大及其常委会进行监督
+
+##### 70 国家也可以成为我国法律关系的主体
+
+##### 71 企业法人的，分立合并，它的权利和义务自行消灭
+
+##### 72 股份有限公司的设立，必须有固定的生产经营场所和必要的生产经营条件，以及合法的名称，建立符合要求的组织机构
+
+##### 73 重庆市制定的《xxxx暂行办法》，属于具体行政行为
+
+##### 74 商标权属于知识产权
+
+##### 75 我国行政诉讼，民事诉讼，刑事诉讼均由原告承担举证责任
+
+##### 76 只有当其他部门法不能充分保护某种社会关系的时候，才由刑法保护
+
+##### 77 我国是多民族的国家，国家结构形式是复合制
+
+##### 78 立法即创制法律和其他规范性文件，法的修改和废止不属于立法
+
+##### 79 甲相中乙的二手汽车，议定8万成交，甲当场付订金1万元，如果甲反悔，无法退回所交的1万元订金
+
+##### 80 行政行为，通常需要和行政相对方协商或者征得对方的同意，方可实施
+
+##### 81 基于行政法治的原则，我国不允许政府有自由裁量权
+
+##### 82 仲裁委员会在县级以上人民政府所在地区层层划分设立
+
+##### 83 国家不能成为民事法律关系的主体
+
+##### 84 法律即调整人的行为，也调整人的思想
+
+##### 85 中华人民共和国主席属于我国的国家机关
+
+##### 86 地方各级检察院发现同级人民法院发生法律效力的判决或者裁定有错误的无权向同级人民法院提出抗诉
+
+##### 87 受国家机关、国有公司、企业、事业单位、人民团体委托管理、经营国有财产的人员，利用职务上的便利，侵吞、窃取、骗取或者以其他手段非法占有国有财物的，以贪污罪论。
+
+##### 88 公正遗嘱自办理公正手续之日起生效
+
+##### 89 在某些特定情况下，学理解释可被认为正式解释，具有法律约束力
+
+##### 90 在人民法院受理民事案件后，宣告判决之前，原告撤回起诉的诉讼程序中止，免交诉讼费用
+
+##### 91 公民著作权，专利权中的人身权利不能作为遗产
+
+##### 92 宪法规定，各少数民族居住的地方实行区域自治，设立自治机关，行驶自治权。
+
+##### 93 税法具有强制性和无偿性
+
+##### 94 宪法时国家一切立法活动的基础，是制定一般法律的依据
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
 
 
