--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -174,9 +174,9 @@
 
 ##### 93 税法具有强制性和无偿性
 
-##### 94 宪法时国家一切立法活动的基础，是制定一般法律的依据
+##### 94 宪法是国家一切立法活动的基础，是制定一般法律的依据
 
-##### 
+##### 95 
 
 ##### 
 
