--- a/2-1法理学-一、法律责任.md
+++ b/2-1法理学-一、法律责任.md
@@ -42,7 +42,13 @@
     ③民事责任以财产性责任为主，以非财产性责任为辅；
     ④民事责任是一种补偿性责任；
     ⑤民事责任是相对性的责任，是特定主体之间的责任。
-
+    
+##### 民事责任的特征说法正确的是（C）
+    A:民事责任具有国家强制性 ``没有强制性，没人会赔偿给你！``
+    B:民事责任以财产性责任为主
+    C:民事责任是一种惩罚性责任 ``补偿性责任``
+    D:承担民事责任的前提是违反了民事义务
+        
 ### 3.行政责任
 
     （1）行政责任是指因违反行政法或因行政法规定而应承担的法律责任。
@@ -103,6 +109,12 @@
      D:有责任，但是不受法律制裁
  
      注：既然是免除，说明原来是有责任的，但是法律规定可以免除，部分免除的话，说明还是要受到法律的制裁！
+     
+##### 下列哪项行为不能减轻或者免除法律责任的（D）
+    A:家住在偏偏的山区王某把入室抢劫的李某捆起来，关押了6小时后，才把李某送到20公里外的公安局  (自助型免责)
+    B:李某偷了一辆价值150元的自行车，10年后被人查出（时效免责）
+    C:医生征得李某的同意，锯掉长有恶性肿瘤的小腿
+    D:赵某和三个青年打架，拔出刀子将对方一人刺成重伤 (斗殴的行为，不存在免责)
 
 ##### 违宪责任是所有法律责任中最严厉的一种（×）
     刑事责任要命的，是最严厉
