--- a/2-1法理学-四、法的渊源.md
+++ b/2-1法理学-四、法的渊源.md
@@ -85,3 +85,9 @@
     C:地方县级政府
     D:地方县级政府部门
 
+##### 当代中国法的非正式渊源不包括（C）；
+    A:习惯
+    B:党的政策
+    C:法规  法规是正式渊源。
+    D:判例
+    法的正式渊源：【宪法行地自章国】
