--- a/2-3主要实体法-第二节 行政法-四、行政复议.md
+++ b/2-3主要实体法-第二节 行政法-四、行政复议.md
@@ -71,3 +71,10 @@
     D:县环保局或县政府
     复议维持共同告：提起行政复议之后，你们两都觉得行，我要告你们两
     复议改变单独告：你改变了，你只告你改变了的机关
+
+##### 李某不服工商所对其作出的300元的罚款，应向（D）
+    A:该工商局
+    B:该工商局所在乡政府
+    C:派出该工商所的工商局的上级机关
+    D:派出该工商所的工商局
+    注：工商所受到工商局的垂直领导
