--- a/全面推进依法行政实施纲要.md
+++ b/全面推进依法行政实施纲要.md
@@ -9,6 +9,15 @@
     对与人民群众日常生活、生产直接相关的行政执法活动，主要由``市、县两级行政执法机关实施``。
     要完善行政执法机关的``内部监督制约机制``。
 
+##### 国务院《全面推进依法行政实施纲要》，下列不属于深化行政体制改革方面的内容的是(CE)
+    A、推进综合执法试点
+    B、减少行政执法层次，适当下移执法重心
+    C、健全行政执法案卷评查制度
+    D、建立权责明确、行为规范、监督有效、保障有力的行政执法体制
+    E、严格按照法定程序行使权力，履行职责
+
+
+
 ### 20．严格按照法定程序行使权力、履行职责。
     行政机关作出对行政管理相对人、利害关系人不利的行政决定之前，应当告知行政管理相对人、利害关系人，并给予其陈述和申辩的机会；作出行政决定后，应当告知行政管理相对人依法享有申请行政复议或者提起行政诉讼的权利。对重大事项，行政管理相对人、利害关系人依法要求听证的，行政机关应当组织听证。行政机关行使自由裁量权的，应当在行政决定中说明理由。要切实解决行政机关违法行使权力侵犯人民群众切身利益的问题。
 
