--- a/政治权利.md
+++ b/政治权利.md
@@ -45,3 +45,19 @@
     C:13年
     D:7年
     被剥夺的政治权利:始于刑罚开始        
+
+##### 剥夺政治权利通常是剥夺：（ABCD）
+    A:选举权
+    B:被选举权
+    C:言论出版集会结社游行示威自由的权利
+    D:担任国家机关职务的权利 （被剥夺政治权利的人，不能担任国家机关工作人员中的任何职务。）    
+
+##### 公民必须依照《中华人民共和国集会游行示威法》行使自己的集会、游行、示威权利，这是对公民政治自由权利的限制。”这种观点（D）
+    ①认为公民应无拘无束地行使政治自由权利
+    ②认为法律和自由是统一的
+    ③主张公民在法律范围内行使政治自由权利
+    ④割裂了自由和法律的关系，因而是错误的
+    A. ②③④
+    B. ①③
+    C. ①③④
+    D. ①④    
