--- a/2-3主要实体法-第二节 行政法-四、行政复议.md
+++ b/2-3主要实体法-第二节 行政法-四、行政复议.md
@@ -72,9 +72,40 @@
     复议维持共同告：提起行政复议之后，你们两都觉得行，我要告你们两
     复议改变单独告：你改变了，你只告你改变了的机关
 
+    ### 2.赔偿义务机关    
+        经复议机关复议的，最初造成侵权行为的行政机关为赔偿义务机关，
+        但复议机关的复议决定加重损害的，【复议机关对加重的部分履行赔偿义务。】
+    注：区分赔偿和被告！        
+
 ##### 李某不服工商所对其作出的300元的罚款，应向（D）
     A:该工商局
     B:该工商局所在乡政府
     C:派出该工商所的工商局的上级机关
     D:派出该工商所的工商局
     注：工商所受到工商局的垂直领导
+
+##### 公司对海关处罚不服，申请复议（）
+    A:向市政府提出
+    B:向上一级海关提出
+    C:向人大提出
+    D:向海关总署提出
+
+##### 我国行政复议机关应当自受理之日起60日内作出（C）
+    A:行政复议判决
+    B:行政复议裁定
+    C:行政复议决定  （专业术语不能出错）
+    D:行政复议仲裁
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
