--- a/法律题-2.md
+++ b/法律题-2.md
@@ -1,136 +1,46 @@
-##### 下列不属于乡镇人民政府重点公开的政府信息内容是（）
-    A:社会公益事业建设用地
-    B:乡镇土地利用，总体规划，宅基地使用的审核情况
-    C:乡镇集体企业和其他乡镇经济实体承包，租赁，拍卖等情况
-    D:征收或者征用土地，房屋拆迁，及其补偿，补助费用的发放情况
 
 
 
-##### 按照社会的危害程度，影响程度范围等因素，自然灾害，事故灾害，公共卫生灾害事件一般分为（）
+
+##### 按照社会的危害程度，影响程度范围等因素，自然灾害，事故灾害，公共卫生灾害事件一般分为（C）
     A:重大，大，一般三级
     B:重大，较大，一般三级
     C:特别重大，重大，较大，一般四级
     D:特别严重，严重，一般，较小四级
-
-##### 设置行政许可，应当规定行政许可的（）
-    A:实施条件，标准，程序，收费
-    B:实施机关，条件，程序，期限
-    C:实施依据，实施机关，程序，条件
-    D:实施程序，实施机关，标准，依据
-
-##### 下列属于行政许可的是（）
-    A:认证房屋产权的归属
-    B:发放采矿证
-    C:产品质量认证
-    D:授予荣誉称号
-
-##### 关于行政许可的设定方式，不正确的是（）
-    A:尚未制定法律的，行政法规可以设定行政许可
-    B:国务院采取发布决定的方式设定行政许可
-    C:省，自治区，直辖市人民政府规章，可以设定临时性的行政许可
-    D:省级地方政府规章设定的临时性行政许可,实施满一年，需要继续实施的，应提请国务院制定行政法规
-
-##### 下列不属于行政许可调整范围的是（）
-    A:进出口视频检验机关，经鉴定，给某公司的进出口食品贴上检疫标签
-    B:行政机关根据某化肥厂的申请，发放其生产许可证
-    C:北京市某大学希望上级教育主管部门拨款，对学校进行扩建，上级教育主管部门，对其申请予以审批
-    D:老王下岗后自谋出路，想自己开一个餐馆，于是向工商局提出申请，工商局经审查，发给其营业执照
+    注：《中华人民共和国突发事件应对法》
     
-##### 工商局根据王某的申请，依法举行了听证会，并制作了听证笔录。关于听证笔录的约束力，正确的是（）
-    A:听证笔录可以作为工商局作出行政许可决定的参考
-    B:工商局既可以根据听证笔录，也可以根据听证笔录作出行政许可
-    C:工商局可以根据听证笔录意外的事实为依据作出行政许可
-    D:工商局应当根据听证笔录作出行政许可决定
+
     
-##### 除可以当场作出行政许可决定的外，行政机关应当自受理行政许可申请之日起（）作出行政许可决定
-    A:5日
-    B:10日
-    C:15日
-    D:20日
-    
-##### 行政许可一经（）即获得法律效力
-    A:申请人申请
-    B:行政机关批准
-    C:公正机关公正
-    D:行政机关颁发
-    
-##### 因旧城区改造改建需要征收房屋，多数被征收人认为补偿方案不符合《补偿规定》，可通过参加市，县人民政府组织由（）参加的听证会，并根据听证会情况修改方案。
+##### 因旧城区改造改建需要征收房屋，多数被征收人认为补偿方案不符合《补偿规定》，可通过参加市，县人民政府组织由（C）参加的听证会，并根据听证会情况修改方案。
     A:被征收人和专家代表
     B:公众代表和政府代表
     C:被征收人和公众代表
     D:被征收人和政府代表
-    
-##### 下列那一项不是行政赔偿的构成要件（）
-    A:损害事实的存在
-    B:有违法行使职权
-    C:违法行为同损害事实有因果关系
-    D:作出职务侵权行为的国家机关及其工作人员主观上有过错
-    
-##### 公司对海关处罚不服，申请复议（）
-    A:向市政府提出
-    B:向上一级海关提出
-    C:向人大提出
-    D:向海关总署提出
-    
-##### 我国行政复议机关应当自受理之日起60日内作出（）
-    A:行政复议判决
-    B:行政复议裁定
-    C:行政复议决定
-    D:行政复议仲裁
-    
-##### 某个体户因经常出售注水肘肉，被工商行政机关吊销营业执照，该项处罚属于（）
-    A:财产罚
-    B:人身自由罚
-    C:能力罚
-    D:申诫罚
-    
-##### 下列对行政处罚执行的表述，有误的是（）
-    A:执法人员当场收缴对公民依法处以20元的罚款
-    B:当事人到期逆不缴纳罚款的，每日按罚款数额50%加处罚款
-    C:一般来说，当事人对处罚决定不服申请行政复议的，处罚不停止执行
-    D:行政机关及其执法人员当场收缴罚款的，必须向当事人出具省级财政部门统一制发的罚款收据
-    
-##### 违法行为在（）年内未被发现的，不在给予行政处罚，但法律规定的除外。
-    A:1
-    B:2
-    C:3
-    D:4
-    
-##### 不能当场作出行政处罚决定的情形是（）
-    A:对公民60元的罚款
-    B:对法人1000元的罚款
-    C:对公民警告
-    D:对法人警告
-    
-##### 设定和实施行政强制的，应当依照法定的（）
-    A:依据，标准，程序，条件
-    B:权限，范围，条件，程序
-    C:条件，标准，程序，收费
-    D:权限，标准，程序，期限                    
 
-##### 有关行政强制的说法，有误的是（）
-    A:实施行政强制，应当坚持教育和强制相结合
-    B:行政强制措施只能由行政机关实施执行
-    C:因在强制执行中扩大强制执行范围受到损害的，公民有权依法要求赔偿
-    D:采用非强制手段可以达到行政管理目的的，不得实施行政强制
+##### 工商局根据王某的申请，依法举行了听证会，并制作了听证笔录。关于听证笔录的约束力，正确的是（D）
+    A:听证笔录可以作为工商局作出行政许可决定的参考
+    B:工商局既可以根据听证笔录，也可以不根据听证笔录作出行政许可
+    C:工商局可以根据听证笔录以外的事实为依据作出行政许可
+    D:工商局应当根据听证笔录作出行政许可决定    
+    注：（1）听证应当制作听证笔录，笔录应该交给听证参加人确认无误后签字或者盖章
+        （2）工商局应当根据听证笔录作出行政许可决定
+            
+
     
-##### 以下不属于行政强制措施的是（）
-    A:扣押财物
-    B:责令停产停业
-    C:限制公民人身自由
-    D:查封场所，设施，或者财物     
-                   
-##### 紧急情况，需要当场实施行政强制措施的，行政执法人员应当在（）小时内向行政机关负责人报告，并补办批准手续
-    A:6
-    B:12
-    C:24
-    D:48
-                        
-##### 有关行政强制措施的说法，有误的是（）
-    A:行政强制措施不得委托
-    B:行政领导可实施行政掐强制措施
-    C:违法行为情节显著轻微或者没有明显社会危害的，可以不采取行政强制措施
-    D:当场告知或者实施行政强制措施后，立即通知当事人家属实施行政强制措施的行政机关，地点，期限。
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+               
+
                         
 ##### 农民种植的果树和果实之间是（）关系
     A:主物和从物
