--- a/政府信息公开条例.md
+++ b/政府信息公开条例.md
@@ -60,6 +60,8 @@
     （二）社会公益事业建设情况；
     （三）征收或者征用土地、房屋拆迁及其补偿、补助费用的发放、使用情况；
     （四）抢险救灾、优抚、救济、社会捐助等款物的管理、使用和分配情况。
+    
+    
 ### 第十二条
     乡（镇）人民政府应当依照本条例第九条的规定，在其职责范围内确定主动公开的政府信息的具体内容，并重点公开下列政府信息：
     （一）贯彻落实国家关于农村工作政策的情况；
@@ -70,6 +72,14 @@
     （六）抢险救灾、优抚、救济、社会捐助等款物的发放情况；
     （七）乡镇集体企业及其他乡镇经济实体承包、租赁、拍卖等情况；
     （八）执行计划生育政策的情况。
+
+##### 下列不属于乡镇人民政府重点公开的政府信息内容是（A）
+    A:社会公益事业建设用地  ``### 第十一条 : 设区的市级人民政府、县级人民政府及其部门重点公开的政府信息还应当包括下列内容``
+    B:乡镇土地利用，总体规划，宅基地使用的审核情况
+    C:乡镇集体企业和其他乡镇经济实体承包，租赁，拍卖等情况
+    D:征收或者征用土地，房屋拆迁，及其补偿，补助费用的发放情况    
+    
+    
 ### 第十三条
     除本条例第九条、第十条、第十一条、第十二条规定的行政机关主动公开的政府信息外，公民、法人或者其他组织还可以根据自身生产、生活、科研等特殊需要，向国务院部门、地方各级人民政府及县级以上地方人民政府部门申请获取相关政府信息。
 
@@ -162,7 +172,8 @@
     公民、法人或者其他组织认为行政机关在政府信息公开工作中的具体行政行为侵犯其合法权益的，可以依法申请行政复议或者提起行政诉讼。
 
 ### 第三十四条
-行政机关违反本条例的规定，未建立健全政府信息发布保密审查机制的，由监察机关、上一级行政机关责令改正；情节严重的，对行政机关主要负责人依法给予处分。
+    行政机关违反本条例的规定，未建立健全政府信息发布保密审查机制的，由监察机关、上一级行政机关责令改正；
+    情节严重的，对行政机关主要负责人依法给予处分。
 
 ### 第三十五条
     行政机关违反本条例的规定，有下列情形之一的，由监察机关、上一级行政机关责令改正；情节严重的，对行政机关直接负责的主管人员和其他直接责任人员依法给予处分；构成犯罪的，依法追究刑事责任：
