--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -176,61 +176,61 @@
 
 ##### 94 宪法是国家一切立法活动的基础，是制定一般法律的依据
 
-##### 95 
+##### 95 合同的订立一般要经过邀约和承诺两个步骤
 
-##### 
+##### 96 法的制定需要经过讨论和确立
 
-##### 
+##### 97 受害人要求行政赔偿时，可以单独提出行政赔偿请求；也可以在行政复议、行政诉讼中一并提出。还可以直接提起行政赔偿诉讼
 
-##### 
+##### 98 一般情况下，无民事行为能力人和限制民事行为能力人的法定代理人是其法定监护人
 
-##### 
+##### 99 法律责任可以免除，免除后意外着当事人不会在受到相应的法律制裁
 
-##### 
+##### 100 对于发回重审的案件，当事人不服一审判决的，不可以上诉
 
-##### 
+##### 101 《中华人民共和国自然保护区条例》属于环境保护法
 
-##### 
+##### 102 法律关系是一种物质关系
 
-##### 
+##### 103 按照审判监督程序重新审理的案件，既可以使用一审的程序，也可以使用二审程序审理，具体由重新审理的人民法院决定
 
-##### 
+##### 104 权利制约权力
 
-##### 
+##### 105 地方各级人民法院对产生它的权利机关和上级人民法院负责并报告工作
 
-##### 
+##### 106 社会主义民主政治最基本的内涵是国家的一切权利属于人民，政府权力是有限的
 
-##### 
+##### 107 担保的方式有，保证，订金，违约金，抵押，留置
 
-##### 
+##### 108 《宪法》2004年修正案将国家尊重和保证人权写入了宪法
 
-##### 
+##### 109 行政赔偿的赔偿主体和赔偿义务机关都是致害的行政机关
 
-##### 
+##### 110 代理是代理人为了被代理人的利益，以自己名义对第三人实施法律行为。其后果直接由被代理人承受的一种法律制度
 
-##### 
+##### 111 只有国家机关才能制定法律规范
 
-##### 
+##### 112 公安机关，检察院，审判机关在刑事诉讼中有权发布通缉令
 
-##### 
+##### 113 法人的民事权利能力和法人的民事行为能力范围是一致的
 
-##### 
+##### 114 公安干警孙某负责某信用卡的侦查工作，后因工作需要调至检察院工作，因孙某对该信用卡诈骗案比较熟悉，检察长决定由孙某担任本案的检察员
 
-##### 
+##### 115 民族乡镇人民代表大会以及常务委员会可以撤销民族乡镇人民政府的不合理规定
 
-##### 
+##### 116 中华人民共和国允许拥有双重国籍
 
-##### 
+##### 117 根据刑事诉讼法的规定，涉嫌犯罪的人员公诉前，只能称为犯罪嫌疑人，公诉机关提起公诉后只能称为被告人
 
-##### 
+##### 118 法人只承担民事责任和行政责任，不承担刑事责任
 
-##### 
+##### 119 17岁的高中生和17的打工者具有相同的民事权利和民事行为能力
 
-##### 
+##### 120 行政法规不得和宪法和法律相抵触
 
-##### 
+##### 121 仲裁被人员法院撤销后，当事人只能向人民法院提起民事诉讼，不能重新申请仲裁
 
-##### 
+##### 122 张某为了谋取非法利益，向某国有公司送礼200万元，其行为构成行贿罪，而不是向单位行贿罪
 
 ##### 
 
