--- a/2-3主要实体法-第二节 行政法-四、行政复议.md
+++ b/2-3主要实体法-第二节 行政法-四、行政复议.md
@@ -96,8 +96,11 @@
     C:行政复议决定  （专业术语不能出错）
     D:行政复议仲裁
 
-
-
+##### jc61对县级以上地方各级人民政府工作部门的具体行政行为不服的，申请人（D）
+    A:应向该部门的本级人民政府申请行政复议
+    B:应向上一级主管部门申请行政复议
+    C:应向该部门申请行政复议
+    D:可以向该部门的本机人民政府或者上一级的主管部门申请行政复议
 
 
 
