--- a/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
+++ b/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
@@ -77,6 +77,22 @@
     我国处理劳动争议的程序为：
         协商、调解、仲裁和诉讼四个阶段。
 
+ ##### jc60下列有关劳动合同的表述，错误的是（C）
+     A:用人单位在修改劳动报酬时，应经职工代表大会或者全体职工讨论，提出方案和意见，与工会或者职工代表平等协商确定
+     B:用人单位自用工之日起即与劳动者建立劳动关系
+     C:试用期在劳动合同期限之外
+     D:劳动者在试用期的工作不得低于本单位相同岗位最低档工资或者劳动合同约定
+     
+
+     
+
+
+
+
+
+
+
+    
 
 
 ### （二）社会保障法
