--- a/法律题-2.md
+++ b/法律题-2.md
@@ -1,7 +1,4 @@
 
-
-
-
 ##### 按照社会的危害程度，影响程度范围等因素，自然灾害，事故灾害，公共卫生灾害事件一般分为（C）
     A:重大，大，一般三级
     B:重大，较大，一般三级
@@ -25,84 +22,67 @@
     注：（1）听证应当制作听证笔录，笔录应该交给听证参加人确认无误后签字或者盖章
         （2）工商局应当根据听证笔录作出行政许可决定
             
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-               
-
-                        
-##### 农民种植的果树和果实之间是（）关系
-    A:主物和从物
-    B:原物和孳息
-    C:动产和不动产
-    D:流通物和非流通物
              
-##### 下列有关食品安全标准的说法，有误的是（）
+##### jc53下列有关食品安全标准的说法，有误的是（D）
     A:食品安全标准是强制执行的标准
     B:食品安全标准应当供公众免费查阅
     C:没有食品安全国家标准的，可以指定食品安全地方标准
-    D:企业标准应当报县级以上卫生行政部门备案，本企业内部适用                    
-##### 下列有关食品安全的说法，有误的是（）
+    D:企业标准应当报县级以上卫生行政部门备案，本企业内部适用  
+    注：企业标准应当报（省级）以上卫生行政部门备案  
+    
+    
+                    
+##### jc54 下列有关食品安全的说法，有误的是（B）
     A:国家对食品生产经营实行许可制度
     B:食品进货查验记录应当真实，保存期限不得少于一年
     C:农民个人销售其自产的食用农产品，不需要取得食品流通的许可
     D:食品生产经营人员每年应当进行健康检查，取得健康证明后方可参加工作
+    注：食品进货和出场纪录都是保留两年
                         
-##### 下了有关食品生产经营与食品安全的说法，不对的是（）
+##### jc55下了有关食品生产经营与食品安全的说法，不对的是（C）
     A:食品广告的内容不得涉及疾病预防，治疗功能
     B:地方各级人民政府鼓励食品规模化生产和连锁经营，配送
     C:食品安全监督管理部门可以免检国内著名企业生产的畅销食品
-    D:食品安全生产者认为生产的食品，不符合食品安全标准的应当召回的，应当立即召回                    
+    D:食品安全生产者认为生产的食品，不符合食品安全标准的应当召回的，应当立即召回        
+    注：对食品不得实施免检   
+    
+    
+             
 
-##### 下列有关行政监察的表述，错误的是（）
+##### jc56下列有关行政监察的表述，错误的是（A）
     A:监察机关不能对国家行政机关进行监察
     B:监察机关依法行使职权，不受其他行政部门的干涉
     C:监察机关对监察对象执法，廉政，效能情况进行监察
     D:在提请任命县监察局局长决定之前，必须经上一级监察机关同一
+    注：对国家行政机关和公务员和其他任命的人员进行监察
     
-##### 纳税人开始并销售矿产的，其资源税的征收数量为（）
+    
+##### jc57纳税人开始并销售矿产的，其资源税的征收数量为（D）
     A:开采数量
     B:实际产量
     C:计划产量
     D:销售数量
+    注:销售的销售数量是课税
+       自用的自用数量是课税
     
-##### 有关宅基地的表述，不正确的是（）
+##### jc58有关宅基地的表述，不正确的是（B）
     A:农村村民一户只能拥有一处宅基地
     B:农村村民住宅用地由乡镇人民政府批准
     C:农村村民建住宅应当符合乡镇土地利用总体规划
     D:农村村民出卖，出租住房后再申请宅基地的，不予批准
+    注：乡镇人民政府审核，县级人民政府批准
     
     
-##### 下列有关我国继承法的表述，不正确的是（）
-    A:丧偶而喜爱对公婆尽了主要赡养义务的，可以作为第一顺序继承人
-    B:继承权纠纷提起诉讼的时效为2年
-    C:养子女是第一顺序继承人
-    D:继承人可以作为遗嘱见证人
+
+    
         
- ##### 下列有关劳动合同的表述，错误的是（）
-     A:用人单位在修改劳动报酬时，应经职工代表大会或者全体职工讨论，提出方案和意见，与工会或者职工代表平等协商确定
-     B:用人单位自用工之日起即与劳动者建立劳动关系
-     C:试用期在劳动合同期限之外
-     D:劳动者在试用期的工作不得低于本单位相同岗位最低档工资或者劳动合同约定
+
      
-##### 对县级以上地方各级人民政府工作部门的具体行政行为不服的，申请人（）
-    A:应向该部门的本级人民政府申请行政复议
-    B:应向上一级主管部门申请行政复议
-    C:应向该部门申请行政复议
-    D:可以向该部门的本机人民振幅或者上一级的主管部门申请行政复议
+     
+     
+
     
-##### 民事责任的承担方式不包括（）
+##### jc62民事责任的承担方式不包括（）
     A:更换
     B:罚款
     C:赔礼道歉
