--- a/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
+++ b/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
@@ -83,7 +83,11 @@
      C:试用期在劳动合同期限之外
      D:劳动者在试用期的工作不得低于本单位相同岗位最低档工资或者劳动合同约定
      
-
+##### jc65下列有关合同的表述不正确的是（D）
+    A:合同是平等主体的当事人双方或者多方实施的民事法律行为
+    B:合同是体现当事人双方或者多方意思表示一致的协议
+    C:合同是当事人设立，变更，终止债权债务关系的协议
+    D:我国现行《合同法》也适用于监护协议
      
 
 
