--- a/2-3主要实体法-民事责任的承担方式.md
+++ b/2-3主要实体法-民事责任的承担方式.md
@@ -13,7 +13,7 @@
         即指侵权行为人排除由其行为造成的妨碍他人权利正常行使和利益实现的客观事实状态。
     6.消除危险。
         即指侵权行为人消除由其行为引起的现实存在的某种可能对他人合法权益
-    造成损害的紧急事实状态。
+        造成损害的紧急事实状态。
     7.消除影响。
         即指侵权行为人在其行为造成不良影响的范围内消除对受害人的不利后果。
     8.恢复名誉。
@@ -21,6 +21,11 @@
     9.赔礼道歉。
         即指由侵权行为人以口头或书面的方式向受害人承认错误，表达歉意的承担责任方式。
         
-    违反合同民事责任的承担方式：
+    违反合同民事责任的承担方式：【履行合同违约金补救，方式】
         ①赔偿损失；②违约金；③继续履行；④采取补救措施。
 
+##### jc62民事责任的承担方式不包括（B）
+    A:更换
+    B:罚款
+    C:赔礼道歉
+    D:排查妨碍
