--- a/2-3主要实体法-第三节 民法-（二）法人成立和法人的民事权利能力.md
+++ b/2-3主要实体法-第三节 民法-（二）法人成立和法人的民事权利能力.md
@@ -25,3 +25,20 @@
     第三，法人的民事行为能力只能由它的机关或工作人员加以实现。
          法人的民事行为能力的实现受到法人机关和工作人员活动的限制。
 
+##### jc63下列有关法人的表述，错误的是（C）
+    A:法人以它的主要办事机构所在地位住所
+    B:代表法人行使职权的负责人，是法人的法定代表人
+    C:我国无社会团体法人
+    D:法人能够独立承担民事责任
+    注：社会团体法人: 天使基金会，商会，研究会
+
+##### jc64下列有关法人的表述，错误的是（A）
+    A:全民所有制企业法人以企业所有的财产承担民事责任
+    B:企业法人应当在核准登记的经营范围内从事经营
+    C:有独立经费的机关从成立之日起，具有法人资格
+    D:企业法人的分立，合并，他的权利和义务由变更后的法人享有和承担
+    注：全面所有制企业的财产属于全民所有
+        全民所有制企业又称为国有企业
+        以国家授予其经营管理的财产承担民事责任。
+
+    
