--- a/2-3主要实体法-民事责任的承担方式.md
+++ b/2-3主要实体法-民事责任的承担方式.md
@@ -29,3 +29,28 @@
     B:罚款
     C:赔礼道歉
     D:排查妨碍
+    
+##### jc72甲从商城够买的电视机后，因质量为题电视机爆炸，炸伤甲，甲可请求商城承担何种民事责任（D）
+    A:仅请求侵权责任
+    B:仅请求违约责任
+    C:有权请求侵权责任和违约责任（不能两者都选）
+    D:有权请求侵权责任或违约责任
+    注：（1）产品瑕疵：违约责任
+            产品存在缺陷造成损害:侵权或者违约责任
+        （2）因产品瑕疵造成损害的，被侵权人，造成人身，财产损害的，可以向生产者或销售者请求赔偿
+        （3）其中一方承担侵权责任后，可以向有过错的一方追偿
+
+
+##### jc73甲在商场够得一台“多功能食品加工机”，提出退货，商场答复“该产品说明书未就其使用性能作出明确说明，概不负责”，对此，正确的是（B）
+    A:甲只能向生产者要求退换
+    B:甲应当要求销售者给予退换
+    C:因未当场认真检验商品，所以甲某不能要求退换
+    D:甲某可以选择向销售者或者生产者要求退换并给予赔偿
+    注：商品存在瑕疵，只能是违约责任，违反合同约定
+
+
+
+
+
+
+    
