--- a/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
+++ b/2-3主要实体法-第四节 经济法-四、劳动法和社会保障法.md
@@ -77,6 +77,20 @@
     我国处理劳动争议的程序为：
         协商、调解、仲裁和诉讼四个阶段。
 
+ ### 第三十八条　用人单位有下列情形之一的，劳动者可以解除劳动合同：
+    （一）未按照劳动合同约定提供劳动保护或者劳动条件的；
+    （二）未及时足额支付劳动报酬的；
+    （三）未依法为劳动者缴纳社会保险费的；
+    （四）用人单位的规章制度违反法律、法规的规定，损害劳动者权益的；
+    （五）因本法第二十六条第一款规定的情形致使劳动合同无效的；
+    （六）法律、行政法规规定劳动者可以解除劳动合同的其他情形。
+        用人单位以暴力、威胁或者非法限制人身自由的手段强迫劳动者劳动的，
+        或者用人单位违章指挥、强令冒险作业危及劳动者人身安全的，
+        劳动者可以立即解除劳动合同，不需事先告知用人单位。
+
+
+
+
  ##### jc60下列有关劳动合同的表述，错误的是（C）
      A:用人单位在修改劳动报酬时，应经职工代表大会或者全体职工讨论，提出方案和意见，与工会或者职工代表平等协商确定
      B:用人单位自用工之日起即与劳动者建立劳动关系
@@ -89,7 +103,11 @@
     C:合同是当事人设立，变更，终止债权债务关系的协议
     D:我国现行《合同法》也适用于监护协议
      
-
+##### jc69下列（D）情形，劳动者可以解除劳动合同
+    A:用人单位调整工作内容的
+    B:用人单位与劳动者约定试用期的
+    C:用人单位与劳动者约定保密事项的
+    D:用人单位未依法为劳动者缴纳社会保险费的    
 
 
 
