--- a/法律题-2.md
+++ b/法律题-2.md
@@ -80,65 +80,40 @@
          
 
          
-##### 下列有关合同的表述不正确的是（）
-    A:贷款人可以按照约定检查，监督借款的使用情况
-    B:对借款期限没有约定的，贷款人可以催告借款人随时返还
-    C:借款人未按照约定的借款用途使用借款的，贷款人可以解除合同
-    D:自然人之间的借款合同约定的借款利率不得违反国家有关限制借款利率的规定
+
          
-##### 有关租赁合同的表述，不正确的是（）
-    A:当事人租赁房屋未采用书面形式的，视为不定期租赁
-    B:租赁期限不得超过15年
-    C:承租人按照租赁物的性质使用租赁物，致使租赁物受到损耗的，不承担损害赔偿责任
-    D:租赁物在租赁期间发生所有权变动的，不影响租赁合同的效力
+
          
-##### 下列有关赠与合同的表述，不正确的是（）
-    A:凡赠与人在赠与财产的权利转移之前都可用撤销赠与
-    B:因赠与人重大过失，致使赠与财产损毁的，赠与人应当承担损害赔偿责任
-    C:具有扶贫性质的赠与合同，赠与人不交付赠与财产的，受赠人可以要求交付
-    D:非附义务赠与的财产有瑕疵的，赠与人不承担责任
+
          
-##### 下列（）情形，劳动者可以解除劳动合同
-    A:用人单位调整工作内容的
-    B:用人单位与劳动者约定试用期的
-    C:用人单位与劳动者约定保密事项的
-    D:用人单位为依法为劳动者缴纳社会保险费的
-         
-##### 行政合同的当事人一方必须是（）
+##### jc70行政合同的当事人一方必须是（A）
     A:行政主体
     B:行政组织
     C:行政机关
     D:行政法律主体
+    注：行政主体包括：法律法规授权的组织
+
+### 行政合同也叫行政契约，指行政机关为达到维护与增进公共利益，实现行政管理目标之目的，与相对人之间经过协商一致达成的协议。    
+    1、行政合同的当事人必有一方是行政主体，享有行政权力。行政合同是行政主体为了实现行政管理目标而签订的，
+    因此，当事人中必有一方主体是行政主体。没有行政主体的参加，不能称为行政合同。
+    行政合同必须有行政机关参加并不意味着凡有行政机关的合同都是行政合同。
+    行政机关具有双重身份：行政主体和民事主体。当行政机关以民事主体身份签订的合同，如与家具厂签订的购买办公设备合同，该合同是民事合同；
+    只有当行政机关以行政主体身份签订合同时，该合同才是行政合同。
+    
          
-##### （）属于消费税的征收范围
+##### jc71（C）属于消费税的征收范围
     A:电动汽车
     B:高尔夫车
     C:小轿车
     D:卡丁车
          
-##### 甲从商城狗的电视机后，因质量为题电视机爆炸，炸伤甲，甲可请求商城承担何种民事责任（）
-    A:仅请求侵权责任
-    B:仅请求违约责任
-    C:有权请求侵权责任和违约责任
-    D:有权请求侵权责任或违约责任
+
+    
+    
          
-##### 甲在商场够得一台“多功能食品加工机”，提出退货，商场答复“该产品说明书未就其使用性能作出明确说明，概不负责”，对此，正确的是（）
-    A:甲只能向生产者要求退换
-    B:甲应当要求销售者给予退换
-    C:因未当场认真检验商品，所以甲某不能要求退换
-    D:甲某可以选择向销售者或者生产者要求退换并给予赔偿
-         
-##### 有限责任公司的组织机构不包括（）
-    A:职工代表大会
-    B:股东会
-    C:董事会
-    D:监事会
-         
-##### 以下不符合我国企业法律规定的是（）
-    A:有限合伙人至少应当有一个普通合伙人
-    B:有限合伙人可以以劳务出资
-    C:新合伙人对入伙前的合伙企业债务承担无限连带责任
-    D:补充合伙协议，一般应经过全体合伙人的一致同意
+
+
+
          
 ##### 李某担任某上市公司总经理期间，半年内买卖该公司股票获利300万元，该300万元应当（）
     A:归李某所有
