--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -232,63 +232,63 @@
 
 ##### 122 张某为了谋取非法利益，向某国有公司送礼200万元，其行为构成行贿罪，而不是向单位行贿罪
 
-##### 
+##### 123 受行政机关委托的组织或者个人在行驶权利的过程中，侵犯公民，法人和其他组织合法权益时，委托机关和受委托的组织为共同的赔偿义务人。
 
-##### 
+##### 124 定金的数额可以根据当事人自行约定，但是不得超过合同标的30%
 
-##### 
+##### 125 法治的最终目的是为保障人民的利益，和公民的权利
 
-##### 
+##### 126 合伙企业存续期间，合伙人向合伙人以外的人转让其合伙的份额的时候，需要1/3的以上的多数通过
 
-##### 
+##### 127 个人独自企业的财产不足以清偿债务的时候，投资人应该以其个人的其他资产以予清偿
 
-##### 
+##### 128 根据宪法，我国是一元性的体制，全国只有一个立法体系
 
-##### 
+##### 129 行政诉讼的被告只能是享有并行驶国家行政职权的机关，和法律法规授权的组织，而不能是个人
 
-##### 
+##### 130 当事人因重大误解订立的合同是无效合同
 
-##### 
+##### 131 死刑由最高人民法院核准
 
-##### 
+##### 132 甲向乙购买一台电视机，在这一法律关系中，法律关系的客体是电视机和价款
 
-##### 
+##### 133 我国刑法的溯及力是有条件的溯及既往
 
-##### 
+##### 134 物权是对人权，和相对权
 
-##### 
+##### 135 保险合同是双务有偿要式的合同
 
-##### 
+##### 136 国内法的法律主体主要自然人和法人，而国际法的主体主要是国家
 
-##### 
+##### 137 按照制宪机关的不同，宪法可以分为成文宪法和不成文宪法
 
-##### 
+##### 138 我国民事诉讼，刑事诉讼，行政诉讼，都是两审终审制
 
-##### 
+##### 139 居民村委会，村民委员会也属于国家机关
 
-##### 
+##### 140 公民，法人，其他社会组织认为行政机关的行政行为侵犯了其的合法权益，就可以申请行政复议
 
-##### 
+##### 141 适用简易程序审理的民事案件，当事人不服一审判决的，不可以上诉
 
-##### 
+##### 142 不满14周岁的人，触犯了刑法，一概不负刑事责任
 
-##### 
+##### 143 在行政诉讼期间，一律不停止被诉行为的执行
 
-##### 
+##### 144 人民法院在审理行政案件的时候，以法律，法规和规章作为依据进行审理
 
-##### 
+##### 145 按照“一国两制”的原则，特别行政区的立法制度由特别行政区自行制定
 
-##### 
+##### 146 对于有关犯罪和刑罚的事项，国务院可以制定行政法规作出补充性的规定
 
-##### 
+##### 147 法律在国家社会生活中，具有最高的权威
 
-##### 
+##### 148 对重庆市国税局的具体行政行为不服的，只能向国家税务总局进行行政复议，而不能向重庆市人民政府申请行政复议
 
-##### 
+##### 149 复议机关的复议决定，加重行政相对人损害的，复议机关承担全部的赔偿责任
 
-##### 
+##### 150 行政立法属于抽象的行政行为
 
-##### 
+##### 151 
 
 ##### 
 
