法律真题-选择题完!

--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -288,37 +288,37 @@
 
 ##### 150 行政立法属于抽象的行政行为
 
-##### 151 
+##### 151 刑事诉讼中，被告人是未成年人的，而没有委托辩护人的，人民法院应当指定承担法律援助义务的律师为其提供援助
 
-##### 
+##### 152 行政诉讼中，只有原行政处罚明显不当的，人民法院才可以判决变更 
 
-##### 
+##### 153 法律监督分为国家机关的监督和社会监督两类，国家机关的监督，具体包括国家权力机关的监督，行政机关的监督，司法机关的监督和中国共产的监督
 
-##### 
+##### 154 对县级以上地方各级人民政府工作部门的具体行政行为不服的，申请人可以向该部门的本級人民政府或者上一級的主管部门申请行政复议
 
-##### 
+##### 155 消费者享有自主选择权，公平交易权，经营者不得以格式合同作出对消费者不公平，不合理的规定
 
-##### 
+##### 156 行政机关在行驶职权时，应尽可能的用最少的时间，最低的消耗办最多的事情，取得最大的社会和经济效益
 
-##### 
+##### 157 某市的事业单位中规定，xxx宗教的不得报考
 
-##### 
+##### 158 行政处罚是具体行政行为
 
-##### 
+##### 159 适用一审普通程序的审理的刑事诉讼案件，应当在受力后一个月内审结
 
-##### 
+##### 160 司法机关依法独立行驶职权，不受任何的国家机关，社会团体和个人的干涉
 
-##### 
+##### 161 法律义务的设定以是否侵害其他人的权利为前提
 
-##### 
+##### 162 民事诉讼的简易程序是指基层人民法院及其派出法庭审理民事案件和简单经济纠纷案件适用程序。它是独立于普通程序的一种民事诉讼程序，是普通程序的减缩
 
-##### 
+##### 163 限制行为能力人，依法不能独立订立的合同，在效力上属于效力未定的合同
 
-##### 
+##### 164 知识产权是财产权，不是人身权
 
-##### 
+##### 165 我国国家的体制是以民主集中制为阻止原则和活动原则的人民代表大会
 
-##### 
+##### 166 法治的根本出发点是保障公民权利的实现，并防止国家权力对公民权利的侵犯。
 
 ##### 
 
