--- a/2-3主要实体法-第五节 商法-（三）合伙企业法.md
+++ b/2-3主要实体法-第五节 商法-（三）合伙企业法.md
@@ -24,8 +24,10 @@
     各合伙人应当承担无限连带清偿责任。合伙人由于承担连带责任，所清偿数额超过其应当承
     担数额时，【有权向其他合伙人追偿】。
          
-##### 以下不符合我国企业法律规定的是（）
+##### jc75以下不符合我国企业法律规定的是（）
     A:有限合伙人至少应当有一个普通合伙人
     B:有限合伙人可以以劳务出资
     C:新合伙人对入伙前的合伙企业债务承担无限连带责任
     D:补充合伙协议，一般应经过全体合伙人的一致同意
+    注：有限合法企业不得以劳务出资
+        可以用货币，实物，知识产权，土地使用权，或者其他财产
