--- a/2-3主要实体法-第五节 商法-（二）有限责任公司.md
+++ b/2-3主要实体法-第五节 商法-（二）有限责任公司.md
@@ -27,3 +27,29 @@
     B:股东会
     C:董事会
     D:监事会
+
+##### jc76李某担任某上市公司总经理期间，半年内买卖该公司股票获利300万元，该300万元应当（B）
+    A:归李某所有
+    B:归该公司所有
+    C:由证监会没收
+    D:由李某和该公司共有
+    
+    注：《证券法》第四十七条　上市公司董事、监事、高级管理人员、持有上市公司股份百分之五以上的股东，
+    将其持有的该公司的股票在买入后六个月内卖出，或者在卖出后六个月内又买入，由此所得收益归该公司所有，
+    公司董事会应当收回其所得收益。
+    但是，证券公司因包销购入售后剩余股票而持有百分之五以上股份的，卖出该股票不受六个月时间限制。
+
+
+##### jc77我国《个体工商户条例》2011年实施，下列有关个体工商户的表述错误的是（C）
+    A:登记机关办理年度验照不得收取任何费用
+    B:个体工商户可以凭营业执照及税务登记证明在银行开户，申请贷款
+    C:予以注册登记的，登记机关应当自登记之日起7日内发给营业执照 （注：10日内发）
+    D:县工商行政管理局可以委托其下属工商行政管理所办理个体工商户登记
+
+
+
+
+
+
+
+        
