字符串扩展

--- a/2-2宪法.md
+++ b/2-2宪法.md
@@ -1,28 +1,32 @@
-第一节 宪法的基本理论
-一、宪法概述
-（一）宪法的含义
-宪法是确立国家制度和社会制度的基本原则与政策，调整【公民权利与国家权力】之间的
-基本关系的【国家根本法】。
-（二）宪法的基本特征
-宪法是国家的根本法，这主要表现在以下几个方面：
-1.宪法规定的内容与普通法律不同
+### 第一节 宪法的基本理论
+### 一、宪法概述
+### （一）宪法的含义
+    宪法是确立国家制度和社会制度的基本原则与政策，调整【公民权利与国家权力】之间的
+    基本关系的【国家根本法】。
+    
+### （二）宪法的基本特征
+    宪法是国家的根本法，这主要表现在以下几个方面：
+    
+### 1.宪法规定的内容与普通法律不同
     宪法规定国家的根本性问题，即规定一个国家的根本制度、根本原则、根本任务、公民
     的基本权利和义务、国家机构等国家最根本、最重大的问题。
     而普通法律只是规定国家生活或社会生活中某一方面的问题。
-2.宪法的法律效力与普通法不同
+    
+### 2.宪法的法律效力与普通法不同
     宪法具有最高法律效力。这种最髙法律效力体现在两个方面：
     一是宪法是国家一切立法活动的基础，是制定一般法律的依据；
     二是宪法是一切组织和个人必须严格遵守的【最高行为准则】。
-3.宪法的制定、修改程序与普通法律不同
-    我国宪法第 64 条规定：―宪法的修改，由【全国人民代表大会常务委员会】或者五分之一以
-    上的全国人民代表大会代表提议，并由全国人民代表大会以全体代表的三分之二以上的多数
-    通过。
+    
+### 3.宪法的制定、修改程序与普通法律不同
+    我国宪法第 64 条规定：宪法的修改，由【全国人民代表大会常务委员会】或者五分之一以
+    上的全国人民代表大会代表提议，并由全国人民代表大会以全体代表的三分之二以上的多数通过。
     而普通法律的制定修改，只需全国人民代表大会以【全体代表的过半数】通过即可。
 
-三、制宪
-（一）概念
+### 三、制宪
+### （一）概念
 制宪，即【宪法制定,也称立宪】,是指统治阶级依照一定的原则和程序创制宪法的活动,制宪
 的过程【实质上】就是【统治阶级将自己的意志转化为国家意志并反映到宪法中来】的过程。
+
 （二）《共同纲领》与四部宪法
 1.《中国人民政治协商会议共同纲领》
     1949 年 9 月 29 日，中国人民政治协商会议第一届全体会议选举了中央人民政府委员会，
@@ -34,12 +38,12 @@
     诞生。
     1954 年《宪法》是我国第一部社会主义类型的宪法。
 3.1975 年《宪法》
-    1975 年 1 月，中国的―文化大革命进行的第九年时，第四届全国人民代表大会第一次
+    1975 年 1 月，中国的文化大革命进行的第九年时，第四届全国人民代表大会第一次
     会议通过了我国的第二部宪法，是一部在特殊时期产生的宪法。
 4.1978 年《宪法》
-    1978 年 3 月 5 日粉碎―四人帮不久，第五届全国人民代表大会第一次会议通过的新宪
+    1978 年 3 月 5 日粉碎四人帮不久，第五届全国人民代表大会第一次会议通过的新宪
     法代替了 1975 年宪法。这部宪法比 1975 年宪法有了重大变化，但仍然存在许多缺陷，它肯
-    定了文化大革命的成果和―无产阶级专政下继续革命的理论。
+    定了文化大革命的成果和无产阶级专政下继续革命的理论。
 5.1982 年《宪法》
     1982 年 12 月 4 日第五届全国人民代表大会第五次会议，通过了我国第四部宪法即现行
     宪法。1982 年宪法继承发展了 1954 年宪法的基本原则，总结了中国建国以来的发展并吸取
@@ -58,7 +62,7 @@
     第 3 修正案：我国正处于社会主义初级阶段，坚持改革开放，把我国建设成为富强、民
     主、文明的国家。
     第 4 修正案：多党合作和政治协商制度。
-    第 5 修正案：国营经济改为―国有经济。
+    第 5 修正案：国营经济改为国有经济。
     第 6 修正案：家庭联产承包为主的责任制。
     第 7 修正案：国家实行社会主义市场经济，加强经济立法，完善宏观调控。
     第 11 修正案：县级人大任期从三年改为五年。
@@ -72,9 +76,9 @@
     权利和利益，对个体经济、私营经济实行引导、监督和管理。
     第 17 修正案：反革命活动改为危害国家安全的犯罪。
 4.2004 年宪法修正案【乡长说，拿了你们的土地会给你们补偿的，保护你们的人权】
-    第 18 修正案：在―三个代表重要思想指引下，推动物质文明、政治文明、精神文明协
+    第 18 修正案：在三个代表重要思想指引下，推动物质文明、政治文明、精神文明协
     调发展。
-    第 19 修正案：爱国统一战线中增加―社会主义事业的建设者。
+    第 19 修正案：爱国统一战线中增加社会主义事业的建设者。
     第 20 修正案：国家为了公共利益的需要，可以征收或征用土地并给与补偿。
     第 21 修正案：国家保护非公有制经济的合法的权利和利益，对非公有制经济进行鼓励、
     支持、引导、监督、管理。
@@ -83,7 +87,7 @@
     第 23 修正案：建立健全同经济发展水平相适应的社会保障制度。
     第 24 修正案：国家尊重和保障人权。
     第 25 修正案：全国人大中增加特别行政区选出的人大代表。
-    第 26 修正案：―戒严改为―紧急状态。
+    第 26 修正案：戒严改为紧急状态。
     第 28 修正案：国家主席代表国家进行国事活动，接受外国使节。
     第 30 修正案：乡级人大任期从三年改为五年。
     第 31 修正案：增加国歌。
@@ -91,8 +95,8 @@
 世界上解释宪法的机关主要有三种模式：
     1.由立法机关解释，该模式起源于英国，我国也采该模式，由全国人大常委会对《宪法》
     进行解释。【全国人大和全国人大常委会负责监督宪法的实施】
-    2.由司法机关解释，即由最高人民法院解释宪法，该模式源自美国的―马伯里诉麦迪逊
-    案‖，由最高人民法院对立法、行政法规是否违宪进行司法审查。
+    2.由司法机关解释，即由最高人民法院解释宪法，该模式源自美国的马伯里诉麦迪逊
+    案，由最高人民法院对立法、行政法规是否违宪进行司法审查。
     3.由专门机关解释，由宪法法院、宪法委员会、宪法保障法院等特别设立的机关解释宪
     法，目前奥地利、俄罗斯、韩国等采此模式。
 六、宪法监督
