--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -1,321 +1,318 @@
-##### 当事人向人民法院请求保护民事权利的诉讼时效期限为1年（）
 
-##### 物权优先，原则是指物权在任何时候都优于债权（）
+×
+√ 
+##### dz8 宪法的修改有全国人大常委会提议或者全国人大代表大会五分之一以上的代表提议方可修改，修正案经全体代表的2/3以上的多数同意才能通过。（√）
 
-##### 在我国，所有国家机关都有权制定法律规范（）
+##### dz9 任何人只要做了危害社会的事情，都是犯罪（）
 
-##### 宪法的修改有全国人大常委会提议或者全国人大代表大会五分之一以上的代表提议方可修改，修正案经全体代表的2/3以上的多数同意才能通过。（）
+##### dz10 管制是轻于拘役的刑罚，因此管制的最低期限比拘役最低期限更低（）
 
-##### 任何人只要做了危害社会的事情，都是犯罪（）
+##### dz11 任何公民，非经人民检察院批准或者决定，或者人民法院决定，并由公安机关执行，不受逮捕
 
-##### 管制是轻于拘役的刑罚，因此管制的最低期限比拘役最低期限更低（）
+##### dz13 全国人大的组成人员不得担任党的机关，国家行政机关，审判机关，国家行政机关的职务（）
 
-##### 任何公民，非经人民检察院批准或者决定，或者人民法院决定，并由公安机关执行，不受逮捕
+##### dz14 刑事制裁和民事制裁的目的相同，都是为了预防犯罪不就被害人的损失（） 
 
-##### 13 全国人大的组成人员不得担任党的机关，国家行政机关，审判机关，国家行政机关的职务（）
+##### dz15 全国人大常委会 ，国务院均实行首长负责制（）
 
-##### 14 刑事制裁和民事制裁的目的相同，都是为了预防犯罪不就被害人的损失（） 
+##### dz16 贪污贿赂（hui lu）罪包含，挪用公款罪，介绍贿赂罪，巨额财产来源不明罪隐瞒境外存款罪，私分国有财产罪和私分罚没财务罪（）
 
-##### 15 全国人大常委会 ，国务院均实行首长负责制（）
+##### dz17 已满16周岁的人犯罪应负刑事责任，已满14周岁不满16周岁的人犯故意杀人罪，爆炸，投毒以及危害国家安全组等应付刑事责任，不满14周岁，不负刑事责任（）
 
-##### 16 贪污贿赂（hui lu）罪包含，挪用公款罪，介绍贿赂罪，巨额财产来源不明罪隐瞒境外存款罪，私分国有财产罪和私分罚没财务罪（）
+##### dz18 行政诉讼过程中，被告不得自行向原告，第三人和证人收集证据（）
 
-##### 17 已满16周岁的人犯罪应负刑事责任，已满14周岁不满16周岁的人犯故意杀人罪，爆炸，投毒以及危害国家安全组等应付刑事责任，不满14周岁，不负刑事责任（）
+##### dz19 国家权利运行的唯一目的是保障公民权利的实现（）
 
-##### 18 行政诉讼过程中，被告不得自行向原告，第三人和证人收集证据（）
+##### dz20 成文宪法的缺点是适应差，不容易顺应复杂多变的政治环境和社会发展（）
 
-##### 19 国家权利运行的唯一目的是保障公民权利的实现（）
+##### dz21 具体行政行为的形式多种多样，包括行政许可，行政奖励，行政立法（）
 
-##### 20 成文宪法的缺点是适应差，不容易顺应复杂多变的政治环境和社会发展（）
+##### dz22 普通累犯是指被判处有期徒刑以上刑罚的犯罪分子，刑罚执行完毕后或者赦免以后，五年内再犯应当判处有期徒刑以上刑罚之罪犯罪人。
 
-##### 21 具体行政行为的形式多种多样，包括行政许可，行政奖励，行政立法（）
+##### dz23 两人以上的共同过失犯罪，也会构成共同犯罪
 
-##### 22 普通累犯是指被判处有期徒刑以上刑罚的犯罪分子，刑罚执行完毕后或者赦免以后，五年内再犯应当判处有期徒刑以上刑罚之罪犯罪人。
+##### dz24 诉讼代理人在同一个案件中只能代理一方当事人进行诉讼，不能同时代表双方进行诉讼
 
-##### 23 两人以上的共同过失犯罪，也会构成共同犯罪
+##### dz25 上级人民法院监督下级人民法院的工作 
 
-##### 24 诉讼代理人在同一个案件中只能代理一方当事人进行诉讼，不能同时代表双方进行诉讼
+##### dz26 法律面前人人平等，指的是法律适用平等
 
-##### 25 上级人民法院监督下级人民法院的工作 
+##### dz27 中央人民政府是我国对外交往的唯一国际法主体
 
-##### 26 法律面前人人平等，指的是法律适用平等
+##### dz28 法人的民事权利能力和公民的民事权利不同，而且不同的法人其民事权利能力也不同
 
-##### 27 中央人民政府是我国对外交往的唯一国际法主体
+##### dz29 民定宪法是成文宪法的最早形式
 
-##### 28 法人的民事权利能力和公民的民事权利不同，而且不同的法人其民事权利能力也不同
+##### dz30 一物之上只能存在一个所有权，不得有两个互不相容两个以上的物权同时存在在一个物体上
 
-##### 29 民定宪法是成文宪法的最早形式
+##### dz31 一物一权是指一物之上只能有一个所有权
 
-##### 30 一物之上只能存在一个所有权，不得有两个互不相容两个以上的物权同时存在在一个物体上
+##### dz32 有民事行为能力的人，一定有民事权利能力
 
-##### 31 一物一权是指一物之上只能有一个所有权
+##### dz33 甲和乙是好友，在一次逛商场是，甲看上了一把仿真枪，于是乙就买来送给甲，但是甲拿这把枪来抢劫，甲和乙构成共同犯罪
 
-##### 32 有民事行为能力的人，一定有民事权利能力
+##### dz34 同样的国体可以有不同的政体形式
 
-##### 33 甲和乙是好友，在一次逛商场是，甲看上了一把仿真枪，于是乙就买来送给甲，但是甲拿这把枪来抢劫，甲和乙构成共同犯罪
+##### dz35 外国人，无国籍人，和外国人在我国的企业也可以成为我国的行政法律关系主体
 
-##### 34 同样的国体可以有不同的政体形式
+##### dz36 在中华人民共和国境内的企业，个体经济组织和已知形成的劳动关系的劳动者适用《劳动法》
 
-##### 35 外国人，无国籍人，和外国人在我国的企业也可以成为我国的行政法律关系主体
+##### dz37 法以权利和义务为主要内容并具有普遍的约束力。
 
-##### 36 在中华人民共和国境内的企业，个体经济组织和已知形成的劳动关系的劳动者适用《劳动法》
+##### dz38 行政诉讼中一律不适用调解
 
-##### 37 法以权利和义务为主要内容并具有普遍的约束力。
+##### dz39 刑罚中，附加刑只能附加使用，不能单独适用
 
-##### 38 行政诉讼中一律不适用调解
+##### dz40 许多国家制定和修改宪法时，都要成立专门的制宪和修宪的机构
 
-##### 39 刑罚中，附加刑只能附加使用，不能单独适用
+##### dz41 法律所说的人是：自然人，本国公民，外国人，无国籍人，不包括法人。
 
-##### 40 许多国家制定和修改宪法时，都要成立专门的制宪和修宪的机构
+##### dz42 我国宪法从结构上看包括序言，正文四章和附则
 
-##### 41 法律所说的人是：自然人，本国公民，外国人，无国籍人，不包括法人。
+##### dz43 仲裁机构隶属于行政机关，不附属于法院
 
-##### 42 我国宪法从结构上看包括序言，正文四章和附则
+##### dz44 只有国家机关和国家机关工作人员，违法行驶职权，对公民的和其他组织造成损害的，受害人才有依法取得国家赔偿的权利
 
-##### 43 仲裁机构隶属于行政机关，不附属于法院
+##### dz45 成文宪法都属于刚性宪法
 
-##### 44 只有国家机关和国家机关工作人员，违法行驶职权，对公民的和其他组织造成损害的，受害人才有依法取得国家赔偿的权利
+##### dz46 受教育和劳动及时公民的权利又是公民的义务
 
-##### 45 成文宪法都属于刚性宪法
+##### dz47 我国法律一律不具有溯及力
 
-##### 46 受教育和劳动及时公民的权利又是公民的义务
+##### dz48 民事诉讼一审程序一律应当在立案之日起6个月内审结
 
-##### 47 我国法律一律不具有溯及力
+##### dz49 刑事自诉案件是被害人及法定代表人或者近亲属为追究被告人的刑事责任，自行向人民法院起诉的案件，人民法院应当受理
 
-##### 48 民事诉讼一审程序一律应当在立案之日起6个月内审结
+##### dz50 紧急避险行为不负任何责任
 
-##### 49 刑事自诉案件是被害人及法定代表人或者近亲属为追究被告人的刑事责任，自行向人民法院起诉的案件，人民法院应当受理
+##### dz51 仲裁裁决书与人民法院生效的判决书具有同等效力
 
-##### 50 紧急避险行为不负任何责任
+##### dz52 某公司因工作需要，购买了一辆小轿车，其权益受《消费者权益保护法保护》
 
-##### 51 仲裁裁决书与人民法院生效的判决书具有同等效力
+##### dz53 我国公民的权利和义务具有一致性
 
-##### 52 某公司因工作需要，购买了一辆小轿车，其权益受《消费者权益保护法保护》
+##### dz54 不正当竞争行为侵害的是消费者的合法权益
 
-##### 53 我国公民的权利和义务具有一致性
+##### dz55 在民事诉讼中，人民法院对起诉进行审理后，对应当提前行政诉讼的案件，应当告知原告提起行政诉讼
 
-##### 54 不正当竞争行为侵害的是消费者的合法权益
+##### dz56 农村劳动者，现役军人，家庭保姆不适用劳动法。
 
-##### 55 在民事诉讼中，人民法院对起诉进行审理后，对应当提前行政诉讼的案件，应当告知原告提起行政诉讼
+##### dz57 我国刑法制订了，5种主刑 4种附加刑
 
-##### 56 农村劳动者，现役军人，家庭保姆不适用劳动法。
+##### dz58 如果合同约定不明确，则债务人可以随时向债权人履行义务，债权人也可随时要求债务人履行义务，但应当给对方足够的准备时间。
 
-##### 57 我国刑法制订了，5种主刑 4种附加刑
+##### dz59 行政诉讼既要审查被诉行政行为的合法性，也要审查合理性
 
-##### 58 如果合同约定不明确，则债务人可以随时向债权人履行义务，债权人也可随时要求债务人履行义务，但应当给对方足够的准备时间。
+##### dz60 我国公民有言论、出版、集会、结社、游行、示威和罢工的自由。
 
-##### 59 行政诉讼既要审查被诉行政行为的合法性，也要审查合理性
+##### dz61 精神抚慰金不属于国家赔偿的规定赔偿范围
 
-##### 60 我国公民有言论、出版、集会、结社、游行、示威和罢工的自由。
+##### dz62 地方各级人民政府对本级人大及其常委会负责并报告工作，同时还要想上一级行政机关负责并报告工作
 
-##### 61 精神抚慰金不属于国家赔偿的规定赔偿范围
+##### dz63 对教育部的具体行政行为不服的，可以向国务院申请裁决，也可以向人民法院提起诉讼
 
-##### 62 地方各级人民政府对本级人大及其常委会负责并报告工作，同时还要想上一级行政机关负责并报告工作
+##### dz64 守法主体不仅包括国家机关，也包括所有的法人和自然人
 
-##### 63 对教育部的具体行政行为不服的，可以向国务院申请裁决，也可以向人民法院提起诉讼
+##### dz65 犯罪方面的故意，不是任何犯罪所必备的犯罪构成的主观要件
 
-##### 64 守法主体不仅包括国家机关，也包括所有的法人和自然人
+##### dz66 行政行为一经作出，非经法定程序，不得随意变更和撤销
 
-##### 65 犯罪方面的故意，不是任何犯罪所必备的犯罪构成的主观要件
+##### dz67 《中华人民政治协商会议共同纲领》不是我国宪法的渊源形式
 
-##### 66 行政行为一经作出，非经法定程序，不得随意变更和撤销
+##### dz68 狭义的宪法监督是指所有的国家机关和执政党对立法活动和行政活动所实施的监督
 
-##### 67 《中华人民政治协商会议共同纲领》不是我国宪法的渊源形式
+##### dz69 宪法的实施是全国人大及其常委会进行监督
 
-##### 68 狭义的宪法监督是指所有的国家机关和执政党对立法活动和行政活动所实施的监督
+##### dz70 国家也可以成为我国法律关系的主体
 
-##### 69 宪法的实施是全国人大及其常委会进行监督
+##### dz71 企业法人的，分立合并，它的权利和义务自行消灭
 
-##### 70 国家也可以成为我国法律关系的主体
+##### dz72 股份有限公司的设立，必须有固定的生产经营场所和必要的生产经营条件，以及合法的名称，建立符合要求的组织机构
 
-##### 71 企业法人的，分立合并，它的权利和义务自行消灭
+##### dz73 重庆市制定的《xxxx暂行办法》，属于具体行政行为
 
-##### 72 股份有限公司的设立，必须有固定的生产经营场所和必要的生产经营条件，以及合法的名称，建立符合要求的组织机构
+##### dz74 商标权属于知识产权
 
-##### 73 重庆市制定的《xxxx暂行办法》，属于具体行政行为
+##### dz75 我国行政诉讼，民事诉讼，刑事诉讼均由原告承担举证责任
 
-##### 74 商标权属于知识产权
+##### dz76 只有当其他部门法不能充分保护某种社会关系的时候，才由刑法保护
 
-##### 75 我国行政诉讼，民事诉讼，刑事诉讼均由原告承担举证责任
+##### dz77 我国是多民族的国家，国家结构形式是复合制
 
-##### 76 只有当其他部门法不能充分保护某种社会关系的时候，才由刑法保护
+##### dz78 立法即创制法律和其他规范性文件，法的修改和废止不属于立法
 
-##### 77 我国是多民族的国家，国家结构形式是复合制
+##### dz79 甲相中乙的二手汽车，议定8万成交，甲当场付订金1万元，如果甲反悔，无法退回所交的1万元订金
 
-##### 78 立法即创制法律和其他规范性文件，法的修改和废止不属于立法
+##### dz80 行政行为，通常需要和行政相对方协商或者征得对方的同意，方可实施
 
-##### 79 甲相中乙的二手汽车，议定8万成交，甲当场付订金1万元，如果甲反悔，无法退回所交的1万元订金
+##### dz81 基于行政法治的原则，我国不允许政府有自由裁量权
 
-##### 80 行政行为，通常需要和行政相对方协商或者征得对方的同意，方可实施
+##### dz82 仲裁委员会在县级以上人民政府所在地区层层划分设立
 
-##### 81 基于行政法治的原则，我国不允许政府有自由裁量权
+##### dz83 国家不能成为民事法律关系的主体
 
-##### 82 仲裁委员会在县级以上人民政府所在地区层层划分设立
+##### dz84 法律即调整人的行为，也调整人的思想
 
-##### 83 国家不能成为民事法律关系的主体
+##### dz85 中华人民共和国主席属于我国的国家机关
 
-##### 84 法律即调整人的行为，也调整人的思想
+##### dz86 地方各级检察院发现同级人民法院发生法律效力的判决或者裁定有错误的无权向同级人民法院提出抗诉
 
-##### 85 中华人民共和国主席属于我国的国家机关
+##### dz87 受国家机关、国有公司、企业、事业单位、人民团体委托管理、经营国有财产的人员，利用职务上的便利，侵吞、窃取、骗取或者以其他手段非法占有国有财物的，以贪污罪论。
 
-##### 86 地方各级检察院发现同级人民法院发生法律效力的判决或者裁定有错误的无权向同级人民法院提出抗诉
+##### dz88 公正遗嘱自办理公正手续之日起生效
 
-##### 87 受国家机关、国有公司、企业、事业单位、人民团体委托管理、经营国有财产的人员，利用职务上的便利，侵吞、窃取、骗取或者以其他手段非法占有国有财物的，以贪污罪论。
+##### dz89 在某些特定情况下，学理解释可被认为正式解释，具有法律约束力
 
-##### 88 公正遗嘱自办理公正手续之日起生效
+##### dz90 在人民法院受理民事案件后，宣告判决之前，原告撤回起诉的诉讼程序中止，免交诉讼费用
 
-##### 89 在某些特定情况下，学理解释可被认为正式解释，具有法律约束力
+##### dz91 公民著作权，专利权中的人身权利不能作为遗产
 
-##### 90 在人民法院受理民事案件后，宣告判决之前，原告撤回起诉的诉讼程序中止，免交诉讼费用
+##### dz92 宪法规定，各少数民族居住的地方实行区域自治，设立自治机关，行驶自治权。
 
-##### 91 公民著作权，专利权中的人身权利不能作为遗产
+##### dz93 税法具有强制性和无偿性
 
-##### 92 宪法规定，各少数民族居住的地方实行区域自治，设立自治机关，行驶自治权。
+##### dz94 宪法是国家一切立法活动的基础，是制定一般法律的依据
 
-##### 93 税法具有强制性和无偿性
+##### dz95 合同的订立一般要经过邀约和承诺两个步骤
 
-##### 94 宪法是国家一切立法活动的基础，是制定一般法律的依据
+##### dz96 法的制定需要经过讨论和确立
 
-##### 95 合同的订立一般要经过邀约和承诺两个步骤
+##### dz97 受害人要求行政赔偿时，可以单独提出行政赔偿请求；也可以在行政复议、行政诉讼中一并提出。还可以直接提起行政赔偿诉讼
 
-##### 96 法的制定需要经过讨论和确立
+##### dz98 一般情况下，无民事行为能力人和限制民事行为能力人的法定代理人是其法定监护人
 
-##### 97 受害人要求行政赔偿时，可以单独提出行政赔偿请求；也可以在行政复议、行政诉讼中一并提出。还可以直接提起行政赔偿诉讼
+##### dz99 法律责任可以免除，免除后意外着当事人不会在受到相应的法律制裁
 
-##### 98 一般情况下，无民事行为能力人和限制民事行为能力人的法定代理人是其法定监护人
+##### dz100 对于发回重审的案件，当事人不服一审判决的，不可以上诉
 
-##### 99 法律责任可以免除，免除后意外着当事人不会在受到相应的法律制裁
+##### dz101 《中华人民共和国自然保护区条例》属于环境保护法
 
-##### 100 对于发回重审的案件，当事人不服一审判决的，不可以上诉
+##### dz102 法律关系是一种物质关系
 
-##### 101 《中华人民共和国自然保护区条例》属于环境保护法
+##### dz103 按照审判监督程序重新审理的案件，既可以使用一审的程序，也可以使用二审程序审理，具体由重新审理的人民法院决定
 
-##### 102 法律关系是一种物质关系
+##### dz104 权利制约权力
 
-##### 103 按照审判监督程序重新审理的案件，既可以使用一审的程序，也可以使用二审程序审理，具体由重新审理的人民法院决定
+##### dz105 地方各级人民法院对产生它的权利机关和上级人民法院负责并报告工作
 
-##### 104 权利制约权力
+##### dz106 社会主义民主政治最基本的内涵是国家的一切权利属于人民，政府权力是有限的
 
-##### 105 地方各级人民法院对产生它的权利机关和上级人民法院负责并报告工作
+##### dz107 担保的方式有，保证，订金，违约金，抵押，留置
 
-##### 106 社会主义民主政治最基本的内涵是国家的一切权利属于人民，政府权力是有限的
+##### dz108 《宪法》2004年修正案将国家尊重和保证人权写入了宪法
 
-##### 107 担保的方式有，保证，订金，违约金，抵押，留置
+##### dz109 行政赔偿的赔偿主体和赔偿义务机关都是致害的行政机关
 
-##### 108 《宪法》2004年修正案将国家尊重和保证人权写入了宪法
+##### dz110 代理是代理人为了被代理人的利益，以自己名义对第三人实施法律行为。其后果直接由被代理人承受的一种法律制度
 
-##### 109 行政赔偿的赔偿主体和赔偿义务机关都是致害的行政机关
+##### dz111 只有国家机关才能制定法律规范
 
-##### 110 代理是代理人为了被代理人的利益，以自己名义对第三人实施法律行为。其后果直接由被代理人承受的一种法律制度
+##### dz112 公安机关，检察院，审判机关在刑事诉讼中有权发布通缉令
 
-##### 111 只有国家机关才能制定法律规范
+##### dz113 法人的民事权利能力和法人的民事行为能力范围是一致的
 
-##### 112 公安机关，检察院，审判机关在刑事诉讼中有权发布通缉令
+##### dz114 公安干警孙某负责某信用卡的侦查工作，后因工作需要调至检察院工作，因孙某对该信用卡诈骗案比较熟悉，检察长决定由孙某担任本案的检察员
 
-##### 113 法人的民事权利能力和法人的民事行为能力范围是一致的
+##### dz115 民族乡镇人民代表大会以及常务委员会可以撤销民族乡镇人民政府的不合理规定
 
-##### 114 公安干警孙某负责某信用卡的侦查工作，后因工作需要调至检察院工作，因孙某对该信用卡诈骗案比较熟悉，检察长决定由孙某担任本案的检察员
+##### dz116 中华人民共和国允许拥有双重国籍
 
-##### 115 民族乡镇人民代表大会以及常务委员会可以撤销民族乡镇人民政府的不合理规定
+##### dz117 根据刑事诉讼法的规定，涉嫌犯罪的人员公诉前，只能称为犯罪嫌疑人，公诉机关提起公诉后只能称为被告人
 
-##### 116 中华人民共和国允许拥有双重国籍
+##### dz118 法人只承担民事责任和行政责任，不承担刑事责任
 
-##### 117 根据刑事诉讼法的规定，涉嫌犯罪的人员公诉前，只能称为犯罪嫌疑人，公诉机关提起公诉后只能称为被告人
+##### dz119 17岁的高中生和17的打工者具有相同的民事权利和民事行为能力
 
-##### 118 法人只承担民事责任和行政责任，不承担刑事责任
+##### dz120 行政法规不得和宪法和法律相抵触
 
-##### 119 17岁的高中生和17的打工者具有相同的民事权利和民事行为能力
+##### dz121 仲裁被人员法院撤销后，当事人只能向人民法院提起民事诉讼，不能重新申请仲裁
 
-##### 120 行政法规不得和宪法和法律相抵触
+##### dz122 张某为了谋取非法利益，向某国有公司送礼200万元，其行为构成行贿罪，而不是向单位行贿罪
 
-##### 121 仲裁被人员法院撤销后，当事人只能向人民法院提起民事诉讼，不能重新申请仲裁
+##### dz123 受行政机关委托的组织或者个人在行驶权利的过程中，侵犯公民，法人和其他组织合法权益时，委托机关和受委托的组织为共同的赔偿义务人。
 
-##### 122 张某为了谋取非法利益，向某国有公司送礼200万元，其行为构成行贿罪，而不是向单位行贿罪
+##### dz124 定金的数额可以根据当事人自行约定，但是不得超过合同标的30%
 
-##### 123 受行政机关委托的组织或者个人在行驶权利的过程中，侵犯公民，法人和其他组织合法权益时，委托机关和受委托的组织为共同的赔偿义务人。
+##### dz125 法治的最终目的是为保障人民的利益，和公民的权利
 
-##### 124 定金的数额可以根据当事人自行约定，但是不得超过合同标的30%
+##### dz126 合伙企业存续期间，合伙人向合伙人以外的人转让其合伙的份额的时候，需要1/3的以上的多数通过
 
-##### 125 法治的最终目的是为保障人民的利益，和公民的权利
+##### dz127 个人独自企业的财产不足以清偿债务的时候，投资人应该以其个人的其他资产以予清偿
 
-##### 126 合伙企业存续期间，合伙人向合伙人以外的人转让其合伙的份额的时候，需要1/3的以上的多数通过
+##### dz128 根据宪法，我国是一元性的体制，全国只有一个立法体系
 
-##### 127 个人独自企业的财产不足以清偿债务的时候，投资人应该以其个人的其他资产以予清偿
+##### dz129 行政诉讼的被告只能是享有并行驶国家行政职权的机关，和法律法规授权的组织，而不能是个人
 
-##### 128 根据宪法，我国是一元性的体制，全国只有一个立法体系
+##### dz130 当事人因重大误解订立的合同是无效合同
 
-##### 129 行政诉讼的被告只能是享有并行驶国家行政职权的机关，和法律法规授权的组织，而不能是个人
+##### dz131 死刑由最高人民法院核准
 
-##### 130 当事人因重大误解订立的合同是无效合同
+##### dz132 甲向乙购买一台电视机，在这一法律关系中，法律关系的客体是电视机和价款
 
-##### 131 死刑由最高人民法院核准
+##### dz133 我国刑法的溯及力是有条件的溯及既往
 
-##### 132 甲向乙购买一台电视机，在这一法律关系中，法律关系的客体是电视机和价款
+##### dz134 物权是对人权，和相对权
 
-##### 133 我国刑法的溯及力是有条件的溯及既往
+##### dz135 保险合同是双务有偿要式的合同
 
-##### 134 物权是对人权，和相对权
+##### dz136 国内法的法律主体主要自然人和法人，而国际法的主体主要是国家
 
-##### 135 保险合同是双务有偿要式的合同
+##### dz137 按照制宪机关的不同，宪法可以分为成文宪法和不成文宪法
 
-##### 136 国内法的法律主体主要自然人和法人，而国际法的主体主要是国家
+##### dz138 我国民事诉讼，刑事诉讼，行政诉讼，都是两审终审制
 
-##### 137 按照制宪机关的不同，宪法可以分为成文宪法和不成文宪法
+##### dz139 居民村委会，村民委员会也属于国家机关
 
-##### 138 我国民事诉讼，刑事诉讼，行政诉讼，都是两审终审制
+##### dz140 公民，法人，其他社会组织认为行政机关的行政行为侵犯了其的合法权益，就可以申请行政复议
 
-##### 139 居民村委会，村民委员会也属于国家机关
+##### dz141 适用简易程序审理的民事案件，当事人不服一审判决的，不可以上诉
 
-##### 140 公民，法人，其他社会组织认为行政机关的行政行为侵犯了其的合法权益，就可以申请行政复议
+##### dz142 不满14周岁的人，触犯了刑法，一概不负刑事责任
 
-##### 141 适用简易程序审理的民事案件，当事人不服一审判决的，不可以上诉
+##### dz143 在行政诉讼期间，一律不停止被诉行为的执行
 
-##### 142 不满14周岁的人，触犯了刑法，一概不负刑事责任
+##### dz144 人民法院在审理行政案件的时候，以法律，法规和规章作为依据进行审理
 
-##### 143 在行政诉讼期间，一律不停止被诉行为的执行
+##### dz145 按照“一国两制”的原则，特别行政区的立法制度由特别行政区自行制定
 
-##### 144 人民法院在审理行政案件的时候，以法律，法规和规章作为依据进行审理
+##### dz146 对于有关犯罪和刑罚的事项，国务院可以制定行政法规作出补充性的规定
 
-##### 145 按照“一国两制”的原则，特别行政区的立法制度由特别行政区自行制定
+##### dz147 法律在国家社会生活中，具有最高的权威
 
-##### 146 对于有关犯罪和刑罚的事项，国务院可以制定行政法规作出补充性的规定
+##### dz148 对重庆市国税局的具体行政行为不服的，只能向国家税务总局进行行政复议，而不能向重庆市人民政府申请行政复议
 
-##### 147 法律在国家社会生活中，具有最高的权威
+##### dz149 复议机关的复议决定，加重行政相对人损害的，复议机关承担全部的赔偿责任
 
-##### 148 对重庆市国税局的具体行政行为不服的，只能向国家税务总局进行行政复议，而不能向重庆市人民政府申请行政复议
+##### dz150 行政立法属于抽象的行政行为
 
-##### 149 复议机关的复议决定，加重行政相对人损害的，复议机关承担全部的赔偿责任
+##### dz151 刑事诉讼中，被告人是未成年人的，而没有委托辩护人的，人民法院应当指定承担法律援助义务的律师为其提供援助
 
-##### 150 行政立法属于抽象的行政行为
+##### dz152 行政诉讼中，只有原行政处罚明显不当的，人民法院才可以判决变更 
 
-##### 151 刑事诉讼中，被告人是未成年人的，而没有委托辩护人的，人民法院应当指定承担法律援助义务的律师为其提供援助
+##### dz153 法律监督分为国家机关的监督和社会监督两类，国家机关的监督，具体包括国家权力机关的监督，行政机关的监督，司法机关的监督和中国共产的监督
 
-##### 152 行政诉讼中，只有原行政处罚明显不当的，人民法院才可以判决变更 
+##### dz154 对县级以上地方各级人民政府工作部门的具体行政行为不服的，申请人可以向该部门的本級人民政府或者上一級的主管部门申请行政复议
 
-##### 153 法律监督分为国家机关的监督和社会监督两类，国家机关的监督，具体包括国家权力机关的监督，行政机关的监督，司法机关的监督和中国共产的监督
+##### dz155 消费者享有自主选择权，公平交易权，经营者不得以格式合同作出对消费者不公平，不合理的规定
 
-##### 154 对县级以上地方各级人民政府工作部门的具体行政行为不服的，申请人可以向该部门的本級人民政府或者上一級的主管部门申请行政复议
+##### dz156 行政机关在行驶职权时，应尽可能的用最少的时间，最低的消耗办最多的事情，取得最大的社会和经济效益
 
-##### 155 消费者享有自主选择权，公平交易权，经营者不得以格式合同作出对消费者不公平，不合理的规定
+##### dz157 某市的事业单位中规定，xxx宗教的不得报考
 
-##### 156 行政机关在行驶职权时，应尽可能的用最少的时间，最低的消耗办最多的事情，取得最大的社会和经济效益
+##### dz158 行政处罚是具体行政行为
 
-##### 157 某市的事业单位中规定，xxx宗教的不得报考
+##### dz159 适用一审普通程序的审理的刑事诉讼案件，应当在受力后一个月内审结
 
-##### 158 行政处罚是具体行政行为
+##### dz160 司法机关依法独立行驶职权，不受任何的国家机关，社会团体和个人的干涉
 
-##### 159 适用一审普通程序的审理的刑事诉讼案件，应当在受力后一个月内审结
+##### dz161 法律义务的设定以是否侵害其他人的权利为前提
 
-##### 160 司法机关依法独立行驶职权，不受任何的国家机关，社会团体和个人的干涉
+##### dz162 民事诉讼的简易程序是指基层人民法院及其派出法庭审理民事案件和简单经济纠纷案件适用程序。它是独立于普通程序的一种民事诉讼程序，是普通程序的减缩
 
-##### 161 法律义务的设定以是否侵害其他人的权利为前提
+##### dz163 限制行为能力人，依法不能独立订立的合同，在效力上属于效力未定的合同
 
-##### 162 民事诉讼的简易程序是指基层人民法院及其派出法庭审理民事案件和简单经济纠纷案件适用程序。它是独立于普通程序的一种民事诉讼程序，是普通程序的减缩
+##### dz164 知识产权是财产权，不是人身权
 
-##### 163 限制行为能力人，依法不能独立订立的合同，在效力上属于效力未定的合同
+##### dz165 我国国家的体制是以民主集中制为阻止原则和活动原则的人民代表大会
 
-##### 164 知识产权是财产权，不是人身权
-
-##### 165 我国国家的体制是以民主集中制为阻止原则和活动原则的人民代表大会
-
-##### 166 法治的根本出发点是保障公民权利的实现，并防止国家权力对公民权利的侵犯。
+##### dz166 法治的根本出发点是保障公民权利的实现，并防止国家权力对公民权利的侵犯。
