--- a/2-2宪法.md
+++ b/2-2宪法.md
@@ -24,10 +24,10 @@
 
 ### 三、制宪
 ### （一）概念
-制宪，即【宪法制定,也称立宪】,是指统治阶级依照一定的原则和程序创制宪法的活动,制宪
-的过程【实质上】就是【统治阶级将自己的意志转化为国家意志并反映到宪法中来】的过程。
+    制宪，即【宪法制定,也称立宪】,是指统治阶级依照一定的原则和程序创制宪法的活动,制宪
+    的过程【实质上】就是【统治阶级将自己的意志转化为国家意志并反映到宪法中来】的过程。
 
-（二）《共同纲领》与四部宪法
+### （二）《共同纲领》与四部宪法
 1.《中国人民政治协商会议共同纲领》
     1949 年 9 月 29 日，中国人民政治协商会议第一届全体会议选举了中央人民政府委员会，
     宣告了中华人民共和国的成立，通过了《中国人民政治协商会议共同纲领》。
