--- a/法律题-2.md
+++ b/法律题-2.md
@@ -101,49 +101,33 @@
     只有当行政机关以行政主体身份签订合同时，该合同才是行政合同。
     
          
+         
 ##### jc71（C）属于消费税的征收范围
     A:电动汽车
     B:高尔夫车
     C:小轿车
     D:卡丁车
          
-##### jc84甲和乙因宅基地发生争执，互扭中，甲把乙打成轻伤，甲要求乙承担刑事责任，并赔偿经济损失，于是向法院（A）
-    A:自诉
-    B:上诉
-    C:申诉
-    D:起诉
+
+
+
+
          
-##### 有关刑事诉讼的说法，错误的是（）
-    A:自诉案件中的被告人有罪的举证责任由自诉人承担
-    B:行政机关在查办案件过程中手机的电子数据在刑事诉讼中不能作为证据使用
-    C:公安机关在向有关单位和个人手机，调取证据时，对涉及国家秘密，商业秘密，个人隐私的证据，应当保密
-    D:证人证言必须在法庭上应该公诉人，被害人，被告人，辩护双方质证并且查实以后，才能作为定案的根据
+
          
-##### 以下途径收集的证据不应予以排除的是（）
-    A:刑诉逼供收集的
-    B:暴力方法收集的
-    C:收集物证不符合法定程序又不能补正的
-    D:行政机关在行政执法中收集的证据材料
+
          
-##### 基层人民法院管辖的案件，不适用简易程序审判的是（）
-    A:被告人承认自己所犯罪行，对指控的犯罪事实没有异议的
-    B:被告人对适用简易程序没有异议的
-    C:案件事实清楚，证据充分的
-    D:被告人是盲，聋，哑
+
          
-##### 适用简易程序审理的案件，对可能判处有期徒刑超过3年的，人民法院最迟应在受理后（）内审结。
-    A:20
-    B:一个月
-    C:一个半月
-    D:三个月
+
          
-##### 在刑事诉讼过程中，第二审人民法院受理上诉案件，一般在（）内审结
+##### jc89 在刑事诉讼过程中，第二审人民法院受理上诉案件，一般在（）内审结
     A:一个月
     B:二个月
     C:三个月
     D:六个月
          
-##### 有关未成年人刑事诉讼的说法，以下有误的是（）
+##### jc90 有关未成年人刑事诉讼的说法，以下有误的是（）
     A:对范围的未成年人实行教育，感化，挽救的方针
     B:审判的时候被告人不满18周岁的案件，不公开审理
     C:审判的时候被告人不满18周岁，被判处5年以下有期徒刑的，应当对相关犯罪记录予以封存
