--- a/2-1法理学-四、法的渊源.md
+++ b/2-1法理学-四、法的渊源.md
@@ -14,6 +14,8 @@
         宪法由【全国人民代表大会常务委员会】或者【``五分之一``以上的``全国人民代表大会代表``提议】
         并由``全国人民代表大会以全体代表``的``三分之二``以上的多数通过。
         
+##### dz8 宪法的修改有全国人大常委会提议或者全国人大代表大会五分之一以上的代表提议方可修改，修正案经全体代表的2/3以上的多数同意才能通过。（√）        
+        
 ### 2.法律
 ### （1）制定主体：全国人大——基本法；全国人大常委会——基本法以外的法律
 
