--- a/2-2宪法-第四节 我国的国家机构.md
+++ b/2-2宪法-第四节 我国的国家机构.md
@@ -38,6 +38,10 @@
     并应当有适当名额的少数民族代表。
     全国人民代表大会常务委员会的组成人员不得担任国家行政机关、审判机关、检察机关的职务。
     
+##### dz13 全国人大的组成人员不得担任党的机关，国家行政机关，审判机关，国家行政机关的职务（×）    
+    没有限制当党的机关职务：省委书记兼任人大常委
+    
+    
 ### 2.全国人民代表大会常务委员会的主要职权
     全国人民代表大会常务委员会行使解释宪法和法律，监督宪法的实施，
     制定和修改基本法律以外的其他法律，
