--- a/2-3主要实体法-第一节 刑法-五、基本犯罪类型和职务犯罪.md
+++ b/2-3主要实体法-第一节 刑法-五、基本犯罪类型和职务犯罪.md
@@ -27,6 +27,7 @@
     或者挪用公款数额较大、进行营利活动的，
     或者挪用公款数额较大超过三个月未还的行为。
 
+
 ##### 李某是某国有企业财务人员，私自动用了一笔数额较大的公款去炒股，一个月后被发现，其行为属于（B）
         A:贪污
         B:挪用公款罪
@@ -66,10 +67,10 @@
 
     指国家机关、国有公司、企业、事业单位、人民团体，违反国家规定，将应当上缴国家的罚没财物或者其他国有财产，以单位名义集体私分给个人，数额较大的行为。
 
-    ### 我国《刑法》规定的贪污贿赂罪罪名有（ABC）
+##### 我国《刑法》规定的贪污贿赂罪罪名有（ABC）
         A:行贿罪 B:受贿罪 C:介绍贿赂罪  D:贿赂罪    注：没有贿赂罪
 
-
+##### dz16 贪污贿赂（hui lu）罪包含，挪用公款罪，介绍贿赂罪，巨额财产来源不明罪隐瞒境外存款罪，私分国有财产罪和私分罚没财务罪（√ ）    
 
 
 ### 2.渎职罪
