--- a/2-3主要实体法-第一节 刑法-四、共同犯罪和单位犯罪.md
+++ b/2-3主要实体法-第一节 刑法-四、共同犯罪和单位犯罪.md
@@ -11,6 +11,10 @@
         即各个共同犯罪人必须具有共同的犯罪故意，
         一方故意另一方过失或者双方均为过失的，不构成共同犯罪。
 
+##### dz23 两人以上的共同过失犯罪，也会构成共同犯罪（×）
+    共同犯罪必须是两人以上都是故意
+
+
 
 #### 根据共同犯罪人在共同犯罪中的地位和作用的不同，
     中国刑法把【``共同犯罪人``分为主犯、从犯、胁从犯、教唆犯四种】，并对之分别规定了不同的处罚原则：
