--- a/2-4第四章 主要程序法-第二节 行政诉讼法-四、行政诉讼原告和被告及举证责任.md
+++ b/2-4第四章 主要程序法-第二节 行政诉讼法-四、行政诉讼原告和被告及举证责任.md
@@ -22,6 +22,9 @@
     
     同时，在诉讼过程中，被告不得向原告和证人收集证据。
     人民法院有权要求当事人提供或者补充证据，并有权向有关行政机关及其他公民、组织调取证据。
+    
+    
+##### dz18 行政诉讼过程中，被告不得自行向原告，第三人和证人收集证据（√）
 
 ##### 在行政诉讼中，（AC）对具体的行政行为负举证责任
     A:行政机关
