--- a/法律题--真题-1.md
+++ b/法律题--真题-1.md
@@ -1,35 +1,11 @@
 
 ×
 √ 
-##### dz8 宪法的修改有全国人大常委会提议或者全国人大代表大会五分之一以上的代表提议方可修改，修正案经全体代表的2/3以上的多数同意才能通过。（√）
 
-##### dz9 任何人只要做了危害社会的事情，都是犯罪（）
+##### dz11 任何公民，非经人民检察院批准或者决定，或者人民法院决定，并由公安机关执行，不受逮捕（√ ）
 
-##### dz10 管制是轻于拘役的刑罚，因此管制的最低期限比拘役最低期限更低（）
 
-##### dz11 任何公民，非经人民检察院批准或者决定，或者人民法院决定，并由公安机关执行，不受逮捕
 
-##### dz13 全国人大的组成人员不得担任党的机关，国家行政机关，审判机关，国家行政机关的职务（）
-
-##### dz14 刑事制裁和民事制裁的目的相同，都是为了预防犯罪不就被害人的损失（） 
-
-##### dz15 全国人大常委会 ，国务院均实行首长负责制（）
-
-##### dz16 贪污贿赂（hui lu）罪包含，挪用公款罪，介绍贿赂罪，巨额财产来源不明罪隐瞒境外存款罪，私分国有财产罪和私分罚没财务罪（）
-
-##### dz17 已满16周岁的人犯罪应负刑事责任，已满14周岁不满16周岁的人犯故意杀人罪，爆炸，投毒以及危害国家安全组等应付刑事责任，不满14周岁，不负刑事责任（）
-
-##### dz18 行政诉讼过程中，被告不得自行向原告，第三人和证人收集证据（）
-
-##### dz19 国家权利运行的唯一目的是保障公民权利的实现（）
-
-##### dz20 成文宪法的缺点是适应差，不容易顺应复杂多变的政治环境和社会发展（）
-
-##### dz21 具体行政行为的形式多种多样，包括行政许可，行政奖励，行政立法（）
-
-##### dz22 普通累犯是指被判处有期徒刑以上刑罚的犯罪分子，刑罚执行完毕后或者赦免以后，五年内再犯应当判处有期徒刑以上刑罚之罪犯罪人。
-
-##### dz23 两人以上的共同过失犯罪，也会构成共同犯罪
 
 ##### dz24 诉讼代理人在同一个案件中只能代理一方当事人进行诉讼，不能同时代表双方进行诉讼
 
